--- a/行政-經濟及能源/專利法.md
+++ b/行政-經濟及能源/專利法.md
@@ -60,7 +60,7 @@
 
 * 31 專利申請人對於不予專利之審定有不服者，得於審定書送達之次日起三十日內，備具理由書，請求再審查。
 
-* 32 公告中之發明人，任何人認為有違反本法第一條至第四條之規定者，得自公告之日起六個月內備具聲明書，附具證件，向專利局提起異議請求再審查。
+* 32 公告中之發明，任何人認為有違反本法第一條至第四條之規定者，得自公告之日起六個月內備具聲請書，附具證件，向專利局提起異議請求再審查。
 
 * 33 專利局接到異議聲請書後，應將副本發交申請人，限期一個月內答辯，逾期不答辯者，申請案不成立。但經先行聲明理由准予展期者，不在此限。
 
@@ -186,7 +186,7 @@
 
 * 94 專利局職員洩漏職務上所知關於專利之發明，或申請人事業上之秘密者，處三年以下有期徒刑、拘役或三千元以下罰金。
 
-* 95 凡對於物品之形狀構造或裝置首先創作合於適用之新型者，得依本法申請專利。
+* 95 凡對於物品之形狀構造或裝置首先創作合於實用之新型者，得依本法申請專利。
 
 * 96 本法所稱新型，謂無左列情事之一者：一、申請前已見於刊物或已在國內公開使用他人可能仿效者，但因研究實驗而發表或使用於發表或使用之日起六個月內申請新型專利者，不在此限。二、有相同之發明或新型核准專利在先者。三、已向外國政府申請專利逾一年者。四、經陳列於政府或政府認可之展覽會，於開會之日起逾六個月尚未申請專利者。五、申請專利前大量製造而非從事實驗者。
 
@@ -232,7 +232,7 @@
 
 * 117 以新式樣申請專利，應指定所使用新式樣之物品，並敘明其類別。前項物品之分類，由經濟部定之。
 
-* 118 公告中之新式樣，無論任何人認為有違反本法第一百十一條至第一百十三條之規定或利害關係人認為違反本法第一百十六條之規定者，得自公告之日起六個月內備具聲請書，附具證件，向專利局提起異議，請求再審查。
+* 118 公告中之新式樣，任何人認為有違反本法第一百十一條至第一百十三條之規定或利害關係人認為違反本法第一百十六條之規定者，得自公告之日起六個月內備具聲請書，附具證件，向專利局提起異議，請求再審查。
 
 * 119 新式樣專利權，為專利權人就其指定新式樣所使用之物品專有製造或販賣之權。
 
