--- a/行政-財政及金融/銀行法.md
+++ b/行政-財政及金融/銀行法.md
@@ -26,11 +26,11 @@
 
 * 14 銀行之種類，應在其名稱中表示之，本法公布施行前已登記之銀行名稱與其種類不相符合者，得不予更改，但應於一定時期內調整其業務。前項時期由中央主管官署定之。
 
-* 15 銀行及其分行非在中央主管官署申請營業登記，經核准並領得營業執照後，不得開始營業。違反前項規定，應勒令停業，並得科銀行各負責人五千元以下罰鍰。
+* 15 銀行及其分行非在中央主管官署申請營業登記，經核准並領得營業執照後，不得開始營業。違反前項規定，應勒令停業，並得科銀行各負責人五百元以下罰鍰。
 
 * 16 凡經營第二條第一款至第六款業務之一者，均視同銀行，應依本法辦理。
 
-* 17 銀行不得經營其所核准登記業務以外之業務。違反前項規定，得科銀行各負責人一萬元以下罰鍰，或勒令撤換其負責人，其情節重大者，並得撤銷其營業執照。
+* 17 銀行不得經營其所核准登記業務以外之業務。違反前項規定，得科銀行各負責人一千元以下罰鍰，或勒令撤換其負責人，其情節重大者，並得撤銷其營業執照。
 
 * 18 凡以收存貨幣或款項為常業者，不論其收存方法為給予支票、或存單、或收據、或簿摺、或期票、或其他類似之證明文件，均視為銀行業務。但代理人收存委託人寄託款項、或買賣上繳存定金、或保證金、或業務機關收存之職工儲蓄，不在此限。
 
@@ -46,11 +46,11 @@
 
 * 24 凡經核准設立之銀行，於資本全數認足，並至少收足總額二分之一時，除準用公司登記程序規定，呈請中央主管官署為營業登記外，並應繳驗資本證明書，及所在地銀錢業或信託業同業公會或商會對其發起人之信用證明書。
 
-* 25 銀行於開始營業時，應將中央主管官署所給營業執照記載各款，於本行及分行所在地公告之。違反前項規定，得科銀行各負責人五千元以下罰鍰。
+* 25 銀行於開始營業時，應將中央主管官署所給營業執照記載各款，於本行及分行所在地公告之。違反前項規定，得科銀行各負責人五百元以下罰鍰。
 
 * 26 銀行之股票或股票單應為記名式。儲蓄銀行之股東，應以具有中華民國國籍者為限。
 
-* 27 銀行對於第二十一條所列第一款至第三款及第五款之事項，擬予變更或擬與他銀行合併時，應先呈請中央主管官署核准，方得為之，並應聲請變更營業登記。前項變更營業登記，應於核准後十五日內，在本行及分支行所在地公告之。違反第一項規定，得制止其變更，並得科銀行各負責人一萬元以下罰鍰，違反第二項規定公告期限，得科銀行各負責人五千元以下罰鍰。
+* 27 銀行對於第二十一條所列第一款至第三款及第五款之事項，擬予變更、或擬與他銀行合併時，應先呈請中央主管官署核准，方得為之，並應聲請變更營業登記。前項變更營業登記，應於核准後十五日內，在本行及分支行所在地公告之。違反第一項規定，得制止其變更，並得科銀行各負責人一千元以下罰鍰，違反第二項規定公告期限，得科銀行各負責人五百元以下罰鍰。
 
 * 28 商業銀行、實業銀行得附設儲蓄部及信託部。但各該部之資本、營業及會計必須獨立，並依本法第十九條及第五章或第六章之規定，分別辦理。
 
@@ -64,15 +64,15 @@
 
 * 33 銀行對其負責人所為抵押或質之放款。或對於其負責人有利害關係之公司、合夥或個人所為之放款，其利率與條件不得優於其他貸款人。
 
-* 34 違反第三十二條或第三十三條之規定，得科銀行各負責人一萬元以下罰鍰。
+* 34 違反第三十二條或第三十三條之規定，得科銀行各負責人一千元以下罰鍰。
 
-* 35 銀行不得於規定利息外，以津貼、贈與或其他給予方法吸收存款。但信託款項訂有契約分給紅利者，不在此限。違反前項規定，得科銀行各負責人一萬元以下罰鍰。
+* 35 銀行不得於規定利息外，以津貼、贈與或其他給予方法吸引存款。但信託款項訂有契約分給紅利者，不在此限。違反前項規定，得科銀行各負責人一千元以下罰鍰。
 
-* 36 銀行負責人及其他職員，不得以自己名義，向存戶貸款人或委託人收受佣金酬金或其他不當得利。違反前項規定者，得科一年以下有期徒刑、拘役或二萬元以下罰金。
+* 36 銀行負責人及其他職員，不得以自己名義，向存戶貸款人或委託人收受佣金酬金或其他不當得利。違反前項規定者，得科一年以下有期徒刑、拘役或三千元以下罰金。
 
 * 37 銀行放款以不動產或動產為抵押或質者。每項放款之數，不得超過其抵押物或質押物時價百分之七十。對於為抵押之不動產已設定其他債權者。應合併計算。仍不得超過其時價百分之七十。
 
-* 38 銀行每屆營業年度終了，應將營業報告書、資產負債表、財產目錄、損益表、盈餘分配之決議或議案，於股東同意或股東會承認後十五日內，呈報中央主管官署查核。違反前項所定呈報期限，得科銀行各負責人五千元以下罰鍰，其呈報表冊有故意為不實之記載者，得科銀行各負責人一年以下有期徒刑、拘役或二萬元以下罰金，其情節重大者，並得撤銷其營業執照。
+* 38 銀行每屆營業年度終了，應將營業報告書、資產負債表、財產目錄、損益表、盈餘分配之決議或議案，於股東同意或股東承認後十五日內，呈報中央主管官署查核。違反前項所定呈報期限，得科銀行各負責人五百元以下罰鍰，其呈報表冊有故意為不實之記載者，得科銀行各負責人一年以下有期徒刑、拘役或三千元以下罰金，其情節重大者，並得撤銷其營業執照。
 
 * 39 銀行分派每一營業年度之盈餘時，應先提十分之二為公積金。但公積金已達其資本總額時，不在此限。除前項公積金外，銀行得以章程規定或股東議決，另提特別公積金。
 
@@ -82,7 +82,7 @@
 
 * 42 中央主管官署對於銀行應繳存之保證準備金比率，就第四十八條第一項、第五十七條第一項、第六十六條第一項最低及最高限度內，按照當地當時金融市場情形，商同中央銀行分別核定之。
 
-* 43 中央主管官署得隨時派員，或令地方主管官署派員，檢查銀行業務及帳目，或令銀行於限期內造具資產負債表、財產目錄或其他報告呈核。前項帳目表冊或報告，有故意為不實之記載者，得科銀行各負責人一年以下有期徒刑、拘役或二萬元以下罰金，其情節重大者，並得撤銷其營業執照。
+* 43 中央主管官署得隨時派員，或令地方主管官署派員，檢查銀行業務及帳目，或令銀行於限期內造具資產負債表、財產目錄或其他報告呈核。前項帳目表冊或報告，有故意為不實之記載者，得科銀行各負責人一年以下有期徒刑、拘役或三千元以下罰金，其情節重大者，並得撤銷其營業執照。
 
 * 44 銀行為保障存款人利益，應聯合成立存款保險之組織。
 
@@ -106,7 +106,7 @@
 
 * 54 商業銀行信用放款期限，不得超過六個月，抵押或質之放款期限，不得超過一年。
 
-* 55 商業銀行違反前四條任何規定，得科銀行各負責人一萬元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+* 55 商業銀行違反前四條任何規定，得科銀行各負責人一千元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
 
 * 56 凡對農、工、礦或其他生產、公用、交通事業經營銀行業務者，為實業銀行。在本法公布施行前已經核准營業登記之銀行，其業務合於前項規定而不稱實業銀行者，視同實業銀行。
 
@@ -124,7 +124,7 @@
 
 * 63 實業銀行購入農、工、礦業及其他生產、公用或交通事業公司之有限責任股票，其股票購價，每一公司不得超過其存款總額百分之四，總額不得超過其存款總額百分之四十。
 
-* 64 實業銀行違反前四條任何規定，得科銀行各負責人一萬元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+* 64 實業銀行違反前四條任何規定，得科銀行各負責人一千元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
 
 * 65 凡以複利方法收受以儲蓄為目的之定額存款者，為儲蓄銀行。在本法公布施行前已經核准營業登記之銀行，其業務合於前項規定而不稱儲蓄銀行者，視同儲蓄銀行。
 
@@ -150,13 +150,13 @@
 
 * 76 儲蓄銀行之負責人，不得為本銀行向外借款之保證人。
 
-* 77 儲蓄銀行違反前五條任何規定，得科銀行各負責人一萬元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+* 77 儲蓄銀行違反前五條任何規定，得科銀行各負責人一千元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
 
 * 78 儲蓄銀行之資產不足清償其儲蓄存款時，其銀行負責人應負連帶無限清償責任。前項責任於各該負責人卸職登記之日起滿二年解除。
 
 * 79 銀行兼設儲蓄部者，其負責人及兼管儲蓄業務之經理人，均視為儲蓄部之負責人，應負前條規定之責任。
 
-* 80 儲蓄銀行之資產負債表及財產目錄，每半年應公告一次，並將公報呈報中央主管官署備案。前項公告有故意為不實之記載者，得科銀行各負責人一年以下有期徒刑、拘役或二萬元以下罰金，其情節重大者，並得撤銷其營業執照。
+* 80 儲蓄銀行之資產負債表及財產目錄，每半年應公告一次，並將公報呈報中央主管官署備案。前項公告有故意為不實之記載者，得科銀行各負責人一年以下有期徒刑、拘役或三千元以下罰金，其情節重大者，並得撤銷其營業執照。
 
 * 81 有存款總額百分之五以上之儲戶，對於前條之公告及其業務有疑義時，得呈請主管官署派員會同儲戶所舉代表檢查之。
 
@@ -170,13 +170,13 @@
 
 * 86 信託公司執行信託業務，涉及法律、會計、人事及其他不屬於財務之事項，應委託登記合格執行業務之律師、會計師或其他專門技師為之。
 
-* 87 第七十二條至第七十四條之規定，於信託公司準用之，但其信託契約另有訂定者，從其訂定。信託公司違反前項各準用規定，得科公司各負責人一萬元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+* 87 第七十二條至七十四條之規定，於信託公司準用之，但其信託契約另有訂定者，從其訂定。信託公司違反前項各準用規定，得科公司各負責人一千元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
 
 * 88 信託公司應以善良管理人之注意，運用信託款項。
 
 * 89 信託公司有違反信託契約或重大過失，致信託人受損失時，應負全部賠償責任。信託公司負責人對前項賠償不足時、對其不足額負連帶無限賠償責任。前項連帶無限責任，於各該負責人卸職登記之日起滿二年解除。
 
-* 90 信託公司除有契約特定者外，得為信託人投資於任何事業。信託公司或其負責人自身有利害關係之事業，或信託公司所出售之事業或財產上，不得代為投資，但信託人知情而訂明於信託契約者，不在此限。違反前項規定，公司各負責人應連帶負賠償責任，並得科公司各負責人一萬元以下罰鍰。
+* 90 信託公司除有契約特定者外，得為信託人投資於任何事業。信託公司或其負責人自身有利害關係之事業，或信託公司所出售之事業或財產上，不得代為投資，但信託人知情而訂明於信託契約者，不在此限。違反前項規定，公司各負責人應連帶負賠償責任，並得科公司各負責人一千元以下罰鍰。
 
 * 91 信託公司收受信託款項，在未依契約運用前或在運用中收回之時，準用第八十八條之規定。
 
@@ -186,7 +186,7 @@
 
 * 94 錢莊關於準備金及抵押放款等事項，準用第四十八條至第五十條及第五十二條至第五十五條之規定。
 
-* 95 錢莊之信用放款，不得超過其所收存款總額百分之五十。違反前項規定，得科錢莊各負責人一萬元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+* 95 錢莊之信用放款，不得超過其所收存款總額百分之五十。違反前項規定，得科錢莊各負責人一千元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
 
 * 96 錢莊兼營商業銀行以外之他種銀行業務，應先經中央主管官署之核准，依照關於各該銀行之規定辦理。
 
@@ -208,7 +208,7 @@
 
 * 105 外國銀行在中華民國境內之分行所收定期存款總額，應依第五十條及第五十九條規定，在中華民國境內運用。
 
-* 106 違反前三條任何規定，得科外國銀行在中華民國境內之分行各負責人一萬元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+* 106 違反前三條任何規定。得科外國銀行在中華民國境內之分行各負責人一千元以下罰鍰。其情節重大者。並得勒令撤換其負責人。
 
 * 107 第二十五條、第二十七條、第三十條至第三十八條、第四十條至第四十六條之規定，於外國銀行在中華民國境內之分行準用之。
 
@@ -224,7 +224,7 @@
 
 * 113 銀行對外文件，應標明其營業執照之號數。銀行分行對外文件，除標明其本行營業執照號數外，並應標明該分行營業執照號數。
 
-* 114 銀行營業登記領得執照後，應於十五日內依公司法申請公司設立登記，其變更登記時亦同。違反前項登記期限，得科銀行各負責人五千元以下罰鍰。
+* 114 銀行營業登記領得執照後，應於十五日內依公司法申請公司設立登記，其變更登記時亦同。違反前項登記期限，得科銀行各負責人五百元以下罰鍰。
 
 * 115 銀行營業登記領得執照後，公司設立登記完成前，銀行股東視同合夥之合夥人。
 
