--- a/行政-財政及金融/銀行法.md
+++ b/行政-財政及金融/銀行法.md
@@ -1,102 +1,238 @@
-* 1 凡營左列業務之一者為銀行：一、收受存款及放款。二、票據貼現。三、匯兌或押匯。營前項業務之一而不稱銀行者，視同銀行。
+* 1 本法稱銀行，謂依公司法及本法組織登記，並依本法經營銀行業務之機構。
 
-* 2 銀行應為公司組織，非經財政部核准，不得設立。
+* 2 本法稱銀行業務，為左列各款：一、收受各種存款。二、票據承兌。三、辦理各種放款或票據貼現。四、國內匯兌。五、特許經營之國外匯兌。六、代理收付款項。七、倉庫及保管業務。八、買賣有價證券及投資。九、代募或承募公債、公司債及公司股份。十、特許買賣生金銀及外國貨幣。十一、受託經管財產。前項第一款至第六款為銀行主要業務，第七款至十一款為銀行附屬業務。
 
-* 3 凡創辦銀行者，應先訂立章程，載明左列各款事項，呈請財政部或呈由所在地主管官署轉請財政部核准。一、銀行名稱。二、組織。三、總行所在地。四、資本總額。五、營業範圍。六、存立年限。七、創辦人之姓名、住所。如係招股設立之銀行，除遵照前項辦理外，並應訂立招股章程，呈請財政部或呈由所在地主管官署，轉請財政部核准後，方得招募資本。
+* 3 本法稱活期存款，謂除定期存款外，無時期上限制，存款人得隨時提取之存款。
 
-* 4 銀行經核准並登設後，滿六個月尚未開始營業者，財政部得通知實業部撤銷其登記。但有正當事由時，銀行得呈請延展。
+* 4 本法稱定期存款，謂有一定時期之限制，存款人於到期時提取或一定時期前通知銀行方能提取之存款。
 
-* 5 股份有限公司、兩合公司、股份兩合公司組織之銀行，其資本至少須達五十萬元。無限公司組織之銀行，其資本至少須達二十萬元。前二項規定之資本，在商業簡單地方，得呈請財政部或呈由所在地主管官署，轉請財政部核減。但第一項所規定者，至少不得在二十五萬元以下，第二項所規定者，至少不得在五萬元以下。銀行之資本，不得以金錢外之財產抵充。股份有限公司之股東及兩合公司，股份兩合公司之有限責任股東，應負所認股額加倍之責任。
+* 5 本法稱普通存款，謂除儲蓄存款及信託款項以外之一般活期及定期存款。
 
-* 6 凡經核准登記之銀行，應俟資本全數認足並收足總額二分之一時，分別備具左列各件，呈請財政部派員或委託所在地主管官署驗資具證，經認為確實，由財政部發給銀行營業證書後，方得開始營業。一、出資人姓名、住所清冊。二、出資人已交未交資本數目清冊。三、各職員姓名、住所清冊。四、所在地銀行公會或商會之保結。五、證書費。如係無限責任組織之銀行，除遵照第一項辦理外，並添具左列各件：一、出資人詳細經歷。二、出資人財產證明書。如係股份有限公司組織之銀行，除遵照第一項辦理外，並應添具左列各件：一、創立會決議錄。二、監察人或檢查員報告書。
+* 6 本法稱儲蓄存款，謂以收取利息為目的，憑存單或存摺儲存銀行之活期或定期之定額存款。
 
-* 7 銀行未收之資本，應自開始營業之日起三年內收齊，呈請財政部派員或委託所在地主管官署驗資具證後備案。如於前項所定期限內未經收齊，應減少認足資本或增加實收資本，使認足資本與實收資本相等。
+* 7 本法稱信託款項，謂信託公司或銀行信託部，依信託契約運用或經理之款項。
 
-* 8 銀行之股票，應為記名式。
+* 8 本法稱存款總額，謂銀行收受之活期存款，定期存款，儲蓄存款，及銀行可以運用之其他一切存款之和。
 
-* 9 銀行除左列附屬業務外，不得兼營他業。一、買賣生金銀及有價證券。二、代募公債及公司債。三、倉庫業。四、保管貴重物品。五、代理收付款項。
+* 9 本法稱付現準備金，謂銀行對於所收受之存款，提成儲存現款於本行庫內，或活存當地國家銀行及其他銀行之準備金。
 
-* 10 銀行不得為商店或他銀行、他公司之股東，其在本法施行前已經出資入股者，應於本法施行後三年內退出之，逾期不退出者，應按入股之數核減其資本總額。
+* 10 本法稱保證準備金，謂銀行對於所收受之存款，提成儲存於主管官署所指定之國家銀行，非依存款之減少不得提用之準備金。
 
-* 11 銀行不得收買本銀行股票，並以本銀行股票作借款之抵押品。除關於營業上必需之額動產外，不得買入或承受不動產。因清償債務，受領之本銀行股票，應於四個月內處分，受領之不動產，應於一年內處分。
+* 11 本法稱銀行負責人，謂按銀行所屬公司之種類，依公司法規定應負責之人。
 
-* 12 銀行放款收受他銀行之股票為抵押品時，不得超過該銀行股票總額百分之一。如對該銀行另有放款，其所放款額連同上項受押般票數額合計，不得超過本銀行實收資本及公積金百分之十。
+* 12 本法稱中央主管官署為財政部、地方主管官署，在省為財政廳，在直轄市為財政局。
 
-* 13 非營銀行業務之公司，不得用表明其為銀行之文字。
+* 13 本法所稱銀行，分左列五種：一、商業銀行。二、實業銀行。三、儲蓄銀行。四、信託公司。五、錢莊。
 
-* 14 無限責任組織之銀行，應於其出資總額外，照實收資本繳納百分之二十現金為保證金，存儲中央銀行。前項保證金，在實收資本總額超過五十萬圓以上時，其超過之部份得按百分之十繳納，以達到三十萬圓為限。前二項之保證金，非呈請財政部核准，不得提取。
+* 14 銀行之種類，應在其名稱中表示之，本法公布施行前已登記之銀行名稱與其種類不相符合者，得不予更改，但應於一定時期內調整其業務。前項時期由中央主管官署定之。
 
-* 15 前條保證金，如經財政部核准，得按市價扣足，用國家債券或財政部認可之債券抵充全部或一部。保證金為維持該銀行信用起見，得由財政部處分之。
+* 15 銀行及其分行非在中央主管官署申請營業登記，經核准並領得營業執照後，不得開始營業。違反前項規定，應勒令停業，並得科銀行各負責人五千元以下罰鍰。
 
-* 16 有限責任組織之銀行，於每屆分派盈餘時，應先提出十分之一為公積金。但公積金已達資本總額一倍者，不在此限。
+* 16 凡經營第二條第一款至第六款業務之一者，均視同銀行，應依本法辦理。
 
-* 17 銀行營業年度，為一月至六月及七月至十二月。
+* 17 銀行不得經營其所核准登記業務以外之業務。違反前項規定，得科銀行各負責人一萬元以下罰鍰，或勒令撤換其負責人，其情節重大者，並得撤銷其營業執照。
 
-* 18 每營業年度終，銀行應造具營業報告書，呈報財政部查核，並依財政部所定表式，造具左列表冊公告之。一、資產負債表。二、損益計算書。如係有限責任組織之銀行，除遵照前項辦理外，並應添具左列表冊，登載總分行所在地報紙公告之。一、公積金及股息。二、紅利分派之議案。
+* 18 凡以收存貨幣或款項為常業者，不論其收存方法為給予支票、或存單、或收據、或簿摺、或期票、或其他類似之證明文件，均視為銀行業務。但代理人收存委託人寄託款項、或買賣上繳存定金、或保證金、或業務機關收存之職工儲蓄，不在此限。
 
-* 19 銀行公布認足資本之總數時，應同時公布實收資本之總數。
+* 19 各種銀行資本之最低額，由中央主管官署將全國劃分區域，審核當地人口數量、經濟金融實況及已設立各種銀行之營業情形，分別呈請行政院核定之。前項規定，對本法公布施行前已登記之銀行，得不予適用。
 
-* 20 銀行營業時間，自上午九時起至十二時止，下午一時起至四時止。但因營業上之必要，得延長之。
+* 20 銀行資本應以國幣計算。
 
-* 21 銀行休息日，以星期日、法定紀念日、營業地之例假日及銀行結賬日為限。但每營業年度之結賬日不得過三日。除前項規定外，如因不得已事故須臨時休息者，應即呈請所在地主管官署核准公告。
+* 21 凡欲設立銀行者，應開具左列各款，呈請中央主管官署核准營業登記：一、銀行名稱及其公司組織之種類。二、資本總額。三、業務種類及範圍。四、營業計劃。五、本行及分行所在地。六、發起人姓名、籍貫、住址及履歷。
 
-* 22 財政部得隨時命令銀行報告營業情形及提出文書賬簿。
+* 22 銀行經核准營業登記後，欲設立分行時，應開具前條第三款、第四款及分行所在地，分別呈請營業登記。
 
-* 23 財政部得於必要情形，派員或委託所在地主管官署檢查銀行之營業情形及財產狀況。
+* 23 中央主管官署得視國內各地區經濟金融情形，於呈准行政院後，限制某一地區內不得增設銀行或分行，或不得增設某種銀行或分行。
 
-* 24 銀行營業情形及財產狀況，經財政部檢查後，認為難於繼續經營時，得命令於一定期間內變更執行業務之方法或改選重要職員，並為保護公眾之權利起見，得令其停止營業或扣押其財產及為其他必要處分。
+* 24 凡經核准設立之銀行，於資本全數認足，並至少收足總額二分之一時，除準用公司登記程序規定，呈請中央主管官署為營業登記外，並應繳驗資本證明書，及所在地銀錢業或信託業同業公會或商會對其發起人之信用證明書。
 
-* 25 檢查員應於檢查終了十五日內，將檢查情形呈報財政部或呈由所在地主管官署轉報財政部查核。檢查員對於前項報告內容，應嚴守秘密違者依法懲處。
+* 25 銀行於開始營業時，應將中央主管官署所給營業執照記載各款，於本行及分行所在地公告之。違反前項規定，得科銀行各負責人五千元以下罰鍰。
 
-* 26 銀行於左列情事，須得財政部之核准。一、變更名稱。二、變更組織。三、合併。四、增減資本。五、設置分支行及辦事處或代理處。六、變更總分支行及其他營業所在地。七、分行以外之營業機關改為分行。
+* 26 銀行之股票或股票單應為記名式。儲蓄銀行之股東，應以具有中華民國國籍者為限。
 
-* 27 銀行增加資本時，其應行呈請驗資程序，準用第六條之規定。但非收足資本全額後，不得增加資本。
+* 27 銀行對於第二十一條所列第一款至第三款及第五款之事項，擬予變更或擬與他銀行合併時，應先呈請中央主管官署核准，方得為之，並應聲請變更營業登記。前項變更營業登記，應於核准後十五日內，在本行及分支行所在地公告之。違反第一項規定，得制止其變更，並得科銀行各負責人一萬元以下罰鍰，違反第二項規定公告期限，得科銀行各負責人五千元以下罰鍰。
 
-* 28 銀行減少資本時，應自呈經財政部核准之日起十五日內，將減資數額、減資方法及資產負債表，登報公告之。
+* 28 商業銀行、實業銀行得附設儲蓄部及信託部。但各該部之資本、營業及會計必須獨立，並依本法第十九條及第五章或第六章之規定，分別辦理。
 
-* 29 銀行非經財政部之核准，不得經營信託業務。本法施行前兼營信託業務之銀行，非經財政部之核准，不得繼續其業務。
+* 29 銀行存入其他每一銀行之款，不得超過其所收存款總額百分之十。但存入國家銀行者，不在此限。
 
-* 30 銀行經營信託業務之資本，不得以銀行之資本與法定公積金抵充。
+* 30 銀行各種存款及放款之最高利率，由所在地銀錢業、信託業同業公會會同當地中央銀行議定。當地無銀錢業或信託業同業公會或中央銀行者，參照附近地方所定標準辦理。
 
-* 31 銀行收受之信託資金應分別保存，不得與銀行其他資產混合，非因特別事故預得委託人之同意者，不得以信託資金轉託他銀行或他公司。
+* 31 凡向銀行請求停止給付存戶之存款、匯款或扣留擔保品保管物、或為其他類似之行為者，應經法院之裁判。凡向銀行為前項之請求者，得向銀行提供擔保，請其暫行停止給付，如法院裁判不准停止給付時，請求人及銀行對於因停止給付而遭受損害之人，應負賠償之責。
 
-* 32 經營信託業務之銀行，對其受託之事務，除向委託人收取相當之報酬外，不得再從信託上取得不正當之利益，並不得為有損受益人利益之行為。
+* 32 銀行不得對本行負責人或職員為任何方式之信用放款。
 
-* 33 同一區域內之銀行，得共同辦理左列各款事項。但須受財政部之指導或監督。一、增進金融業之公共利益。二、矯正金融業上之弊害。三、辦理票據交換所及徵信所。四、協助預防或救濟市面之恐慌。五、其他關於金融業之公共事項。
+* 33 銀行對其負責人所為抵押或質之放款。或對於其負責人有利害關係之公司、合夥或個人所為之放款，其利率與條件不得優於其他貸款人。
 
-* 34 銀行對於任何個人或法人團體、非法人團體之放款總額，不得超過其實收資本及公積金百分之十。但有左列情形之一者，不在此限。一、超過部份之債務，有各種實業上之穩當票據為擔保者。二、超過部份之債務，附有確實且易於處分之擔保品者。
+* 34 違反第三十二條或第三十三條之規定，得科銀行各負責人一萬元以下罰鍰。
 
-* 35 本法施行前業已開始營業而未呈經財政部核准之銀行，應於本法施行後六個月內，補請核准，逾期不呈請者，財政部得令停止其業務。
+* 35 銀行不得於規定利息外，以津貼、贈與或其他給予方法吸收存款。但信託款項訂有契約分給紅利者，不在此限。違反前項規定，得科銀行各負責人一萬元以下罰鍰。
 
-* 36 本法施行前業已呈經財政部核准之銀行，其已設之分支行及辦事處或代理處未經核准者，應於本法施行後六個月內補請核准，逾期不呈請者，財政部得令停止其業務。
+* 36 銀行負責人及其他職員，不得以自己名義，向存戶貸款人或委託人收受佣金酬金或其他不當得利。違反前項規定者，得科一年以下有期徒刑、拘役或二萬元以下罰金。
 
-* 37 本法施行前業已開始營業之銀行，其資本總額於本法施行後三年內，得不依第五條之規定。
+* 37 銀行放款以不動產或動產為抵押或質者。每項放款之數，不得超過其抵押物或質押物時價百分之七十。對於為抵押之不動產已設定其他債權者。應合併計算。仍不得超過其時價百分之七十。
 
-* 38 本法施行前業已開始營業之銀行，其額定或認足而未收齊之資本，應於本法施行後三年內收齊之。第七條第二項之規定，於前項情形準用之。
+* 38 銀行每屆營業年度終了，應將營業報告書、資產負債表、財產目錄、損益表、盈餘分配之決議或議案，於股東同意或股東會承認後十五日內，呈報中央主管官署查核。違反前項所定呈報期限，得科銀行各負責人五千元以下罰鍰，其呈報表冊有故意為不實之記載者，得科銀行各負責人一年以下有期徒刑、拘役或二萬元以下罰金，其情節重大者，並得撤銷其營業執照。
 
-* 39 本法施行前兼營非本法所許業務之銀行，於本法施行後三年內，仍得繼續其業務。
+* 39 銀行分派每一營業年度之盈餘時，應先提十分之二為公積金。但公積金已達其資本總額時，不在此限。除前項公積金外，銀行得以章程規定或股東議決，另提特別公積金。
 
-* 40 非公司而經營第一條業務者，應於本法施行後三年內，變更為公司之組織。
+* 40 銀行因不能支付其到期之債務，經中央銀行停止其票據交換時，中央主管官署得令其停業，限期清算。
 
-* 41 銀行改營他業，其存款債務尚未清償以前，財政部得令扣押其財產或為其他必要之處置。其因合併而由非銀行之商號承受銀行之存款及債務時，亦同。第二十二條及第二十三條之規定，於前項情形準用之。
+* 41 銀行解散清算時，應將其營業執照撤銷。
 
-* 42 銀行清算時，其清償債務依左列之次序：一、銀行發行兌換券者，其兌換券。二、有儲蓄存款者，其儲蓄存款。三、一千元未滿之存款。四、一千元以上之存款。
+* 42 中央主管官署對於銀行應繳存之保證準備金比率，就第四十八條第一項、第五十七條第一項、第六十六條第一項最低及最高限度內，按照當地當時金融市場情形，商同中央銀行分別核定之。
 
-* 43 銀行如因破產或其他事故停業或解散時，除依其他法令規定辦理外，應即開具事由，呈請財政部或呈由所在地主管官署轉請財政部核准後，方生效力。銀行停止支付時，除詳具事由，呈請所在地主管官署核辦外，應即在總分行所在地報紙公告之，併呈請財政部查核。
+* 43 中央主管官署得隨時派員，或令地方主管官署派員，檢查銀行業務及帳目，或令銀行於限期內造具資產負債表、財產目錄或其他報告呈核。前項帳目表冊或報告，有故意為不實之記載者，得科銀行各負責人一年以下有期徒刑、拘役或二萬元以下罰金，其情節重大者，並得撤銷其營業執照。
 
-* 44 銀行解散時，應將營業證書繳呈所在地主管官署轉送財政部註銷。
+* 44 銀行為保障存款人利益，應聯合成立存款保險之組織。
 
-* 45 銀行違反法令或其行為有害公益時，財政部得令停止其業務，撤換其職員或撤銷其營業證書。銀行於撤銷營業證書時解散之。
+* 45 中央主管官署得以命令規定銀行營業時間及休假日。
 
-* 46 凡銀行未經財政部核准擅自開業者，財政部得令其停業，並處以五千元以下一千元以上之罰金。
+* 46 銀行違反法令，應撤銷其營業執照，或其負責人應受罰金以上之處分時，主管官署應移送法院裁判。
 
-* 47 銀行之重要職員如有左列各款行為之一時，得處以一年以下之徒刑，並千元以下之罰金。一、於營業報告中，為不實之紀載或為虛偽之公告或以其他方法，欺矇官署及公眾時。二、於檢查時隱蔽文書、賬簿或為不實之陳述或以其他方法妨礙檢查時。
+* 47 凡收受普通存款與辦理一般放款、匯兌及票據承兌或貼現者，為商業銀行。在本法公布施行前已經核准營業登記之銀行，經營前項業務之一部或全部而不稱商業銀行者，視同商業銀行。
 
-* 48 銀行有左列行為之一時，處其重要職員十元以上千元以下之罰金。一、違反第五條第四項、第九條至第十二條、第十四條、第十六條、第十九條、第二十六條、第三十條至第三十二條、第三十四條、第四十條及第四十三條之規定時。二、怠於為本法規定之呈報或公告時。
+* 48 商業銀行所收普通存款，應照左列比率，繳存保證準備金於中央主管官署所指定之銀行：一、活期存款百分之十至十五。二、定期存款百分之五至十。前項保證準備金，經中央主管官署依第十九條規定分區審核，得以公債庫券或國家銀行認可之公司債抵充。
 
-* 49 第二十四條、第四十七條及第四十八條所稱之重要職員，指經理人、獨資之商業主、合夥之合夥人、無限或兩合公司之執行業務股東、股份有限公司之董事與監察人、股份兩合公司中代表公司之無限責任股東與監察人及分支行辦事處或代理處之代表人。
+* 49 商業銀行所收普通存款，應提存之付現準備金。其最低比率如左：一、活期存款百分之十五。二、定期存款百分之七。
 
-* 50 特種銀行，除法律別有規定外，適用本法之規定。
+* 50 商業銀行得經營左列業務：一、收受普通活期、定期存款。二、辦理各種放款或貼現。三、票據承兌。四、辦理國內匯兌。五、經中央銀行特許辦理國外匯兌。六、代理收付款項。七、買賣公債庫券及公司債。八、辦理與其業務有關之倉庫或保管業務。九、投資於生產公用或交通事業。十、代募公債、公司債及公司股份。十一、經中央銀行特許收受外國貨幣或買賣生金銀。
 
-* 51 本法施行日期，以命令定之。
+* 51 商業銀行之信用放款，不得超過其所收存款總額百分之二十五。
+
+* 52 商業銀行得為以不動產為抵押之放款。但此項放款總額，不得超過其所收存款總額百分之十五。
+
+* 53 商業銀行購入生產公用或交通事業公司之有限責任股票，其股票購價，每一公司不得超過其存款總額百分之二，總額不得超過其存款總額百分之二十。
+
+* 54 商業銀行信用放款期限，不得超過六個月，抵押或質之放款期限，不得超過一年。
+
+* 55 商業銀行違反前四條任何規定，得科銀行各負責人一萬元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+
+* 56 凡對農、工、礦或其他生產、公用、交通事業經營銀行業務者，為實業銀行。在本法公布施行前已經核准營業登記之銀行，其業務合於前項規定而不稱實業銀行者，視同實業銀行。
+
+* 57 實業銀行所收普通存款，應照左列比率，繳存保證準備金於中央主管官署所指定之銀行：一、活期存款百分之八至十二。二、定期存款百分之五至八。前項保證準備金，經中央主管官署依第十九條規定分區審核，得以公債、庫券及國家銀行所認可之農、工、礦業或其他生產、公用、交通事業之股票或公司債抵充。
+
+* 58 實業銀行所收普通存款，應提存付現準備金。其最低比率如左：一、活期存款百分之十二。二、定期存款百分之六。
+
+* 59 實業銀行得經營左列業務：一、收受普通活期、定期存款。二、對農、工、礦及其他生產、公用或交通事業，辦理各種放款、票據承兌或貼現及匯兌。三、代農、工、礦業及其他生產、公用或交通事業辦理收付款項。四、代農、工、礦及其他生產、公用、或交通事業募集股份或公司債。五、買賣公債、庫券、公司債及他債券。六、辦理與其業務有關之倉庫或保管業務。七、投資於農、工、礦業及其他生產，公用或交通事業。八、辦理國家銀行指定代理之業務。
+
+* 60 實業銀行所收存款總額，應有百分之六十五以上運用於實業，其以某種專業冠其名稱者，至少應以其存款總額百分之四十運用於該專業，百分之二十五以上運用於其他實業。
+
+* 61 第五十一條及第五十四條之規定，於實業銀行準用之。
+
+* 62 實業銀行得為以不動產為抵押之放款，但此項放款總額，不得超過其所收存款總額百分之三十。
+
+* 63 實業銀行購入農、工、礦業及其他生產、公用或交通事業公司之有限責任股票，其股票購價，每一公司不得超過其存款總額百分之四，總額不得超過其存款總額百分之四十。
+
+* 64 實業銀行違反前四條任何規定，得科銀行各負責人一萬元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+
+* 65 凡以複利方法收受以儲蓄為目的之定額存款者，為儲蓄銀行。在本法公布施行前已經核准營業登記之銀行，其業務合於前項規定而不稱儲蓄銀行者，視同儲蓄銀行。
+
+* 66 儲蓄銀行所收儲蓄及普通存款，應照左列比率，繳存保證準備金於中央主管官署所指定之銀行：一、活期存款百分之十至十五。二、定期存款百分之五至十。前項保證準備金，得以公債、庫券或國家銀行所認可之有價證券抵充。
+
+* 67 儲蓄銀行所收儲蓄及普通存款，應提存付現準備金，其最低比率如左：一、活期存款百分之十。二、定期存款百分之五。
+
+* 68 儲蓄銀行得經營左列業務：一、收受活期儲蓄存款及通知儲蓄存款。二、收受整存整付、零存整付、整存零付及分期付息之定期儲蓄存款。三、收受普通活期、定期存款。四、辦理各種放款。五、辦理國內匯兌。六、代理收付款項。七、買賣公債、庫券及公司債。八、辦理以有價證券為擔保之放款。九、辦理與其業務有關之倉庫或保管業務。十、辦理生產、公用、交通事業及有確實收益之不動產抵押放款。十一、購入他銀行承兌之票據。十二、以本銀行定期存款為擔保之放款。十三、代募公債、庫券及公司債。
+
+* 69 前條儲蓄存款以外之存款，視為普通存款，依第四十八條及第四十九條規定所存之準備金辦理。但此項普通存款總額，不得超過其儲蓄存款之總額二分之一。
+
+* 70 銀行之設有儲蓄部者，該部對於本行其他部份款項之往來，視同他銀行。銀行受破產之宣告時，儲蓄部儲蓄存款，得就儲蓄部之資產優先受償。
+
+* 71 儲蓄存款每戶之最高限額如左：一、活期不得超過該儲蓄銀行或儲蓄部額定股本總額百分之三。二、定期不得超過該儲蓄銀行或儲蓄部額定股本總額百分之六。超過前項定額之存款，視為普通存款，銀行應在其所發給之存款證上註明為普通存款。
+
+* 72 儲蓄銀行之信用放款，不得超過其所收存款總額百分之十。
+
+* 73 儲蓄銀行所有不動產抵押放款，不得超過其所收存款總額百分之三十。
+
+* 74 儲蓄銀行購入農、工、礦業及其他生產、公用或交通事業公司之有限責任股票，其股票購價，每一公司不得超過其存款總額百分之二，總額不得超過其存款總額百分之二十五。
+
+* 75 儲蓄銀行信用放款期限，不得超過六個月，抵押或質之放款期限，不得超過二年。
+
+* 76 儲蓄銀行之負責人，不得為本銀行向外借款之保證人。
+
+* 77 儲蓄銀行違反前五條任何規定，得科銀行各負責人一萬元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+
+* 78 儲蓄銀行之資產不足清償其儲蓄存款時，其銀行負責人應負連帶無限清償責任。前項責任於各該負責人卸職登記之日起滿二年解除。
+
+* 79 銀行兼設儲蓄部者，其負責人及兼管儲蓄業務之經理人，均視為儲蓄部之負責人，應負前條規定之責任。
+
+* 80 儲蓄銀行之資產負債表及財產目錄，每半年應公告一次，並將公報呈報中央主管官署備案。前項公告有故意為不實之記載者，得科銀行各負責人一年以下有期徒刑、拘役或二萬元以下罰金，其情節重大者，並得撤銷其營業執照。
+
+* 81 有存款總額百分之五以上之儲戶，對於前條之公告及其業務有疑義時，得呈請主管官署派員會同儲戶所舉代表檢查之。
+
+* 82 本章規定，於銀行之儲蓄部份準用之。
+
+* 83 凡以信託方式收受、運用或經理款項及財產者，為信託公司。在本法公布施行前，已經核准營業登記之信託公司，其兼營商業或儲蓄銀行業務者，其兼營部份應依第三章或第五章規定辦理。
+
+* 84 第四十八條及第四十九條之規定，於信託公司準用之。
+
+* 85 信託公司得經營左列業務：一、管理財產。二、執行遺囑。三、管理遺產。四、為未成年人或禁治產人之財產監護人。五、受法院命令管理扣押之財產，及受任為破產管理人。六、收受信託款項及存款。七、辦理信託投資。八、代理發行或承募公債、庫券、公司債及股票。九、承受抵押及管理公債、庫券、公司債及股票。十、代理公司股票事務及經理公司債及其他債券擔保品之基金。十一、代理不動產孳息收付事項。十二、代理保險。十三、管理壽險債權及養老金、撫卹金等分期收付。
+
+* 86 信託公司執行信託業務，涉及法律、會計、人事及其他不屬於財務之事項，應委託登記合格執行業務之律師、會計師或其他專門技師為之。
+
+* 87 第七十二條至第七十四條之規定，於信託公司準用之，但其信託契約另有訂定者，從其訂定。信託公司違反前項各準用規定，得科公司各負責人一萬元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+
+* 88 信託公司應以善良管理人之注意，運用信託款項。
+
+* 89 信託公司有違反信託契約或重大過失，致信託人受損失時，應負全部賠償責任。信託公司負責人對前項賠償不足時、對其不足額負連帶無限賠償責任。前項連帶無限責任，於各該負責人卸職登記之日起滿二年解除。
+
+* 90 信託公司除有契約特定者外，得為信託人投資於任何事業。信託公司或其負責人自身有利害關係之事業，或信託公司所出售之事業或財產上，不得代為投資，但信託人知情而訂明於信託契約者，不在此限。違反前項規定，公司各負責人應連帶負賠償責任，並得科公司各負責人一萬元以下罰鍰。
+
+* 91 信託公司收受信託款項，在未依契約運用前或在運用中收回之時，準用第八十八條之規定。
+
+* 92 本章規定，於銀行之信託部份準用之。
+
+* 93 凡按照各地銀錢業習慣，經營商業銀行業務者，為錢莊。在本法公佈施行前已經核准營業登記之錢莊，其資本合於第十九條第一項規定時，得改稱為銀行。
+
+* 94 錢莊關於準備金及抵押放款等事項，準用第四十八條至第五十條及第五十二條至第五十五條之規定。
+
+* 95 錢莊之信用放款，不得超過其所收存款總額百分之五十。違反前項規定，得科錢莊各負責人一萬元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+
+* 96 錢莊兼營商業銀行以外之他種銀行業務，應先經中央主管官署之核准，依照關於各該銀行之規定辦理。
+
+* 97 錢莊改組為銀行時，應按其業務及公司種類，依第二十七條之規定，為變更之登記。
+
+* 98 本章規定，於經營類似錢莊之銀號、票號及其他名稱之銀錢業準用之。
+
+* 99 外國銀行在依公司法呈請認許前，應依本法規定，向中央主管官署呈請特許，非經特許，不得在中華民國境內設立分行。
+
+* 100 中央主管官署得按照國際貿易及生產事業之需要，指定外國銀行得設分行之地區。
+
+* 101 外國銀行呈請特許時，除依公司法第二百九十四條規定，報明各款事項外，應加具本行最近資產負債表、損益表及其分行設立地區該國領事官對其信用之證明書。
+
+* 102 外國銀行在中華民國境內設立分行，經中央主管官署特許後，得在其分行所在地經營第五十條或第五十九條規定各種業務。
+
+* 103 外國銀行在中華民國境內之分行，不得經營或兼營儲蓄銀行或信託公司業務。
+
+* 104 外國銀行在中華民國境內之分行收付款項，以中華民國國幣為限，非經中央銀行特許，不得收受任何外國貨幣之存款或辦理外匯。
+
+* 105 外國銀行在中華民國境內之分行所收定期存款總額，應依第五十條及第五十九條規定，在中華民國境內運用。
+
+* 106 違反前三條任何規定，得科外國銀行在中華民國境內之分行各負責人一萬元以下罰鍰，其情節重大者，並得勒令撤換其負責人。
+
+* 107 第二十五條、第二十七條、第三十條至第三十八條、第四十條至第四十六條之規定，於外國銀行在中華民國境內之分行準用之。
+
+* 108 外國銀行購置與其業務有關之不動產，準用公司法第二百九十八條之規定。
+
+* 109 第四十八條及第四十九條、或第五十七條及第五十八條之規定。於外國銀行在中華民國境內之分行準用之。
+
+* 110 銀行之營業登記、外國銀行之申請特許及銀行之其他登記，其程序準用公司法公司設立登記、外國公司認許、外國分公司登記及其他登記之規定。
+
+* 111 銀行之營業登記、外國銀行之申請特許、及其分行之營業登記、及銀行之其他登記規費，準照公司法各種登記費率計算，隨文繳納。
+
+* 112 銀行營業登記、及外國銀行特許、及分行營業登記後，由中央主管官署發給營業執照，變更登記時，並換發執照，其營業執照費，準照公司法之規定。
+
+* 113 銀行對外文件，應標明其營業執照之號數。銀行分行對外文件，除標明其本行營業執照號數外，並應標明該分行營業執照號數。
+
+* 114 銀行營業登記領得執照後，應於十五日內依公司法申請公司設立登記，其變更登記時亦同。違反前項登記期限，得科銀行各負責人五千元以下罰鍰。
+
+* 115 銀行營業登記領得執照後，公司設立登記完成前，銀行股東視同合夥之合夥人。
+
+* 116 本法規定不適用於國家銀行。但其他銀行除法律另有規定外，適用本法之規定。
+
+* 117 在本法公布前已經核准營業登記之銀行，其章程規定有與本法牴觸者，除本法另有規定外，應於本法施行後一年內修正，呈請中央主管官署核准備案。
+
+* 118 凡經營銀公司、銀號、票號及其他類似之銀錢業者，應於本法施行後一年內，按其業務性質，依本法修正組織，申請中央主管官署為營業登記。
+
+* 119 本法自公布日施行。
 
