--- a/行政-預算及主計/會計法.md
+++ b/行政-預算及主計/會計法.md
@@ -28,7 +28,7 @@
 
 * 15 附屬單位會計下之會計，為附屬單位會計之分會計。
 
-* 16 會計制度之設計，應將所需要之會計報告決定後，據以訂定應設立之會計科目簿籍報表及應有之會計憑證。凡性質相同或類似之機關或基金，其會計制度應為一致之規定。
+* 16 會計制度之設計，應將所需要之會計報告決定後，據以訂定應設立之會計科目簿籍報表及應有之會計憑證。凡性質相同或類似之機關或基金，其會計制度應為一致之規定，政府會計基礎除公庫出納會計外，應採用權責發生制。
 
 * 17 總會計之設計，由各該級政府之主計機關為之。單位會計或附屬單位會計及其分會計之設計，由各該機關單位之主辦會計人員擬訂，呈由各該級政府之主計機關核定。前項設計，應先經核准試辦，再經各關係機關之會計人員及審計人員會商後，始得核定。
 
@@ -40,7 +40,7 @@
 
 * 21 會計年度之開始及終了，依預算法之所定。會計年度之分季，自國曆一月一日起，每三個月為一季。會計年度之分月，依國曆之所定。各月之分旬以一日至十日為上旬，十一日至二十日為中旬，二十一日至月之末日為下旬。各月之分為五日期間者，自一日起，每五日為一期，其最後一期為二十六日至月之末日。期間不以會計年度或國曆月份之始日起算者，或月份非連續計算者，其計算依民法第一百二十一條至第一百二十三條之所定。
 
-* 22 政府會計，以國幣為記帳本位幣，其以不合本位幣之本國或外國貨幣記帳者，應依收支時當地之市價折合本位幣記入主要之帳簿。記帳時，除為乘除計算外，小數至分位為止，釐位四捨五入。
+* 22 政府會計以國幣為記帳本位幣，其以不合本位幣之本國或外國貨幣記帳者，應折合本位幣記入主要之帳簿。記帳時，除為乘除計算外，小數至分位為止，釐位四捨五入。
 
 * 23 各種會計報告，應按行政、監察、立法之需要，及人民所須明瞭之會計事實編製之。
 
@@ -70,7 +70,7 @@
 
 * 36 非政府機關而代理政府事務者，其報告與會計人員之報告發生差額時，應由會計人員加編差額解釋表。
 
-* 37 各單位會計機關及各附屬單位會計機關之報告，呈送上級機關，應依左列期限：一、日報於次日內送出。二、五日報於期間經過後二日內送出。三、週報、旬報於期間經過後三日內送出。四、月報、季報於期間經過後十五日內送出。但法令另定期限者，依其期限。五、半年度報告、年度報告於期間經過後三個月內送出。前項第一款至第四款各報告之呈送期限，於分會計及附屬單位會計之分會計適用之。第一項第五款之報告，應由各單位會計或附屬單位會計機關，就其分會計機關整理後之報告彙編之，其呈送期限，得按各該分會計機關呈送整理報告之期限及其郵遞實需期間加算之。各該分會計機關呈送整理報告之期限，由該管主管機關定之。
+* 37 各單位會計機關及附屬單位會計機關之報告，呈送上級機關，應依左列期限：一、日報於次日內送出。二、五日報於期間經過後二日內送出。三、週報、旬報於期間經過後三日內送出。四、月報、季報於期間經過後十五日內送出。但法令另定期限者，依其期限。五、半年度報告於期間經過後十日內送出。年度報告，依決算法之規定。前項第一款至第四款各報告之呈送期限，於分會計及附屬單位會計之分會計適用之。第一項第五款之報告，應由單位會計或附屬單位會計機關，就其分會計機關整理後之報告彙編之，其呈送期限，得按各該分會計機關呈送整理報告之期限及其郵遞實需期間加算之。各該分會計機關呈送整理報告之期限，由該管主管機關定之。
 
 * 38 前條第一款至第四款之報告，其關於各機關本身之部分，在日報應以每日辦事完畢時已入帳之會計事項，在五日報、週報、旬報、月報、季報，應以各該期間之末日辦事完畢時已入帳之會計事項，分別列入。其關於彙編所屬機關之部分，在日報，應以每日辦事完畢時已收到之所屬機關日報內之會計事項，在五日報、週報、旬報、月報、季報，應以各該期間之末日辦事完畢時已收到之所屬機關之五日報、週報、或旬報、月報、季報內之會計事項分別列入。
 
@@ -176,7 +176,7 @@
 
 * 89 各機關或基金有左列情形之一時，應辦理結帳：一、會計年度終了時。二、有每半年結算一次之必要者，其每次結算時。三、在非常事件除第一款第二款情形外，其事件終了時。四、機關裁撤或基金結束時。
 
-* 90 各種分類帳簿之各帳目所有預收、預付、到期未收、到期未付及其他權責已發生而帳簿尚未登記之各事項，均應於結帳前先為整理紀錄。公有營業之會計事務，除為前項之整理紀錄外，並應對於第四十五條之帳目為整理紀錄。各單位會計或附屬單位會計有所屬分會計者，應俟其所屬分會計之結帳報告到達後，再為整理紀錄，但所屬分會計因特殊事故，其結帳報告不能按時到達時，各該單位會計或附屬單位會計得先行整理結帳，加註說明，其逾期到達者，於下期另案補編之。
+* 90 各種分類帳簿之各帳目所有預收、預付、到期未收、到期未付及其他權責已發生而帳簿尚未登記之各事項，均應於結帳前先為整理紀錄。公有營業之會計事務，除為前項之整理紀錄外，並應對於第四十五條之帳目為整理紀錄。各單位會計或附屬單位會計有所屬分會計者，應俟其所屬分會計之結帳報告到達後，再為整理紀錄，但所屬分會計因特殊事故，其結帳報告不能按期到達時，各該單位會計或附屬單位會計得先行整理結帳，加註說明，俟所屬分會計報告到達後，再行補作紀錄，整理結帳。
 
 * 91 各帳目整理後，其借方、貸方之餘額，應依左列規定處理之：一、公務之會計事務及公有事業之會計事務，各帳目之餘額，應分別結入歲入預算及經費預算之各種帳目，以計算歲入及經費之餘絀。二、公有營業之會計事務，各帳目之餘額，應結入總損益之各種帳目，以為損益之計算。三、前二款會計事務，有資產負債性質各帳目之餘額，應轉入下年度或下期各該帳目。
 
@@ -234,7 +234,7 @@
 
 * 118 交代人員應將經管帳簿及重要備查簿，由前任人員蓋章於其經管最末一筆帳項之後，新任蓋章於其最初一筆帳項之前，均註明年月日證明責任之終始。
 
-* 119 主辦會計人員，應自後任接替之日起一星期內，交代清楚，非取得交代證明書後，不得擅離任地。但前任因病卸職或在任病故時，得由其最高級佐理人員代辦交代，均仍由該前任負責。後任接受移交時，應即會同監交人員，於五日內依據移交表或目錄，逐項點收清楚，出具交代證明書，交前任收執，並會同前任呈報所在機關長官及各該管上級機關。但移交簿籍之內容，仍由前任負責。
+* 119 主辦會計人員，應自後任接受之日起十日內交代清楚，非取得交代證明書後，不得擅離任地。但前任因病卸職或在任病故時，得由其最高級佐理人員代辦交代，均仍由該前任負責。後任接受移交時，應即會同監交人員，於五日內依據移交表或目錄，逐項點收清楚，出具交代證明書，交前任收執，並會同前任呈報所在機關長官及各該管上級機關。但移交簿籍之內容，仍由前任負責。
 
 * 120 會計佐理人員，應自後任接替之日起三日內交代清楚，除因病卸任者，得委託代辦交代外，其在任病故者之交代，應由其該管上級人員為之。
 
@@ -242,11 +242,11 @@
 
 * 122 因機關被裁或基金結束而交代時，交代人員視為前任，接收人員視為後任，其交代適用本章之規定。
 
-* 123 中央政府之各種會計制度，由國民政府主計處頒行之，省政府及隸屬於行政院之市政府之各種會計制度，由各該政府之主計機關擬訂，呈經國民政府主計處核定頒行之。
+* 123 中央政府之各種會計制度，由最高主計機關頒行之，省市政府之各種會計制度，除法令另有規定外，由各該政府之主計機關擬訂，呈經最高主計機關核定頒行之。
 
-* 124 各級政府會計制度之釋例，會計事務細節之處理辦法，在中央應由國民政府主計處，在他級政府應由其主計機關核定令行之。
+* 124 各級政府會計制度之釋例，會計事務細節之處理辦法，應由其最高主計機關核定令行之。
 
-* 125 受政府輔助之私人機關，其會計制度及其會計報告程序，所應準用本法之範圍，由各該政府之主計機關酌定之。
+* 125 受政府輔助之私人機關，其會計制度及其會計報告程序，所應準用本法之範圍，由最高主計機關酌定之。
 
 * 126 自本法施行日起，凡與本法牴觸之法規，其牴觸部份無效。
 
