--- a/行政-內政/戶籍法.md
+++ b/行政-內政/戶籍法.md
@@ -30,7 +30,7 @@
 
 * 16 戶籍登記簿，分本籍登記簿與寄籍登記簿兩種，每種各備正副二本。前項登記簿格式，由內政部定之。
 
-* 17 戶籍登記簿，由縣市政府依照格式分別製定，於每頁騎縫蓋印，並於簿面之裡面記明頁數蓋印，先期發交各戶籍主任。
+* 17 戶籍登記簿由縣市政府依照格式分別製定，於每張編記紙數號數蓋印，並於簿面之裡面記明張數蓋印，先期發交各戶籍主任。
 
 * 18 戶籍登記，每戶用紙一份，每戶一號。
 
@@ -42,11 +42,11 @@
 
 * 22 戶籍登記簿，無論何人得納費請求閱覽或交付謄本。前項閱覽費，每次五分，謄本抄錄費，每百字一角，不滿百字者，以百字計算。法院於必要時，得命戶籍主任交付謄本。
 
-* 23 戶籍登記簿，因天災事變致一部或全部滅失毀損時，戶籍主任應從速開具左列事項，報告監督官署。一、保存之處所。二、滅失毀損之頁數或冊數。三、滅失毀損之事由。四、滅失毀損之年月日。監督官署接到前項報告後，應令戶籍主任依照戶籍登記簿副本，重行編造或補造。
+* 23 戶籍登記簿因天災事變致一部或全部滅失毀損時，戶籍主任應從速開具左列事項，報告監督官署。一、保存之處所。二、滅失毀損之張數及冊數。三、滅失毀損之事由。四、滅失毀損之年月日。監督官署接到前項報告後，應令戶籍主任依照戶籍登記簿副本，重行編造或補造。
 
-* 24 人事登記簿，應依左列事項，各為一冊。一、出生。二、認領。三、收養。四、結婚。五、離婚。六、監護。七、死亡。八、死亡宣告。九、繼承。
+* 24 人事登記簿應依左列事項各為一冊。一、出生。二、認領。三、收養。四、結婚。五、離婚。六、監護。七、死亡。八、死亡宣告。九、繼承。前項登記簿之製發，準用第十七條之規定，但祇須每張騎縫蓋印。
 
-* 25 第十六條第十七條及第二十條至第二十三條之規定，於人事登記簿準用之。
+* 25 第十六條及第二十條至第二十三條之規定，於人事登記簿準用之。
 
 * 26 戶籍及人事登記之聲請，除另有規定外，應向聲請人本籍或寄籍所在地之鄉鎮公所或坊公所為之。
 
