--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -212,7 +212,7 @@
 
 * 107 公司變更組織時，準用第七十七條之規定。
 
-* 108 公司章程訂明專由股東中之一人或數人執行業務時，準用第四十四條、第四十五條、第四十九條至第五十三條、第五十五條至第五十九條及第二百十一條之規定。公司股東選任董事執行業務者，準用股份有限公司董事之規定。第五十四條第二項、第三項之規定，於董事或執行業務之股東準用之。
+* 108 公司章程訂明專由股東中之一人或數人執行業務時，準用第四十五條、第四十六條、第四十九條至第五十三條、第五十五條至第五十九條及第二百十一條之規定。公司股東選任董事執行業務者，準用股份有限公司董事之規定。第五十四條第二項、第三項之規定，於董事或執行業務之股東準用之。
 
 * 109 公司不執行業務之股東，均得行使監察權，其監察權之行使準用第四十八條之規定。公司股東選有監察人者，準用股份有限公司監察人之規定。
 
@@ -432,7 +432,7 @@
 
 * 217 監察人任期不得逾三年，但得連選連任。監察人任期屆滿而不及改選時，延長其執行職務至改選監察人就任時為止；但主管機關得依職權，限期令其改選。
 
-* 218 監察人得隨時調查公司業務及財務狀況，查核簿冊文件，並得請求董事會提出報告。監察人辦理前項事務，得代表公司委託律師、會計師審核之。違反前項規定妨礙監察人檢查行為時，各科四千元以下罰金。
+* 218 監察人得隨時調查公司業務及財務狀況，查核簿冊文件，並得請求董事會提出報告。監察人辦理前項事務，得代表公司委託律師、會計師審核之。違反第一項規定妨礙監察人檢查行為者，各科四千元以下罰金。
 
 * 219 監察人對於董事會編造提出於股東會之各種表冊，應核對簿據調查實況報告意見於股東會。監察人辦理前項事務，得委託會計師審核之。監察人違反第一項規定而為虛偽之報告時，各科四千元以下罰金。
 
