刑事訴訟法 1968.11.22

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -684,7 +684,7 @@
 
 * 343 自訴程序，除本章有特別規定外，準用第二百四十六條、第二百四十九條及前章第二節、第三節關於公訴之規定。
 
-* 344 當事人對於下級法院之判決有不服者，得上訴於上級法院。告訴人或被害人對於下級法院之判決有不服者，亦得具備理由，請求檢察官上訴，除顯無理由者外，檢察官不得拒絕。檢察官為被告之利益，亦得上訴。宣告死刑或無期徒刑之案件，原審法院應不待上訴依職權逕送該管上級法院審判，並通知當事人。前項情形，視為被告已提起上訴。
+* 344 當事人對於下級法院之判決有不服者，得上訴於上級法院；如自訴人於辯論終結後喪失行為能力或死亡者，得由第三百十九條第一項所列得為提起自訴之人上訴。告訴人或被害人對於下級法院之判決有不服者，亦得具備理由，請求檢察官上訴，除顯無理由者外，檢察官不得拒絕。檢察官為被告之利益，亦得上訴。宣告死刑或無期徒刑之案件，原審法院應不待上訴依職權逕送該管上級法院審判，並通知當事人。前項情形，視為被告已提起上訴。
 
 * 345 被告之法定代理人或配偶，得為被告之利益獨立上訴。
 
@@ -1008,7 +1008,7 @@
 
 * 505 適用簡易訴訟程序案件之附帶民事訴訟，準用第五百零一條或第五百零四條之規定。前項移送案件，免納裁判費用。對於第一項裁定，不得抗告。
 
-* 506 刑事訴訟之第二審判決不得上訴於第三審法院者，對於其附帶民事訴訟之第二審判決，得上訴於第三審法院。但應受民事訴訟法第四百六十三條之限制。前項上訴，由民事庭審理之。
+* 506 刑事訴訟之第二審判決不得上訴於第三審法院者，對於其附帶民事訴訟之第二審判決，得上訴於第三審法院。但應受民事訴訟法第四百六十六條之限制。前項上訴，由民事庭審理之。
 
 * 507 刑事訴訟之第二審判決，經上訴於第三審法院，對於其附帶民事訴訟之判決所提起之上訴，已有刑事上訴書狀之理由可資引用者，得不敘述上訴之理由。
 
