--- a/行政-經濟及能源/礦業法.md
+++ b/行政-經濟及能源/礦業法.md
@@ -1,2 +1,244 @@
 * 0 
 
+* 1 中華民國領域內之礦，均為國有，非依本法取得礦業權，不得探採。
+
+* 2 本法所稱之礦為左列各種：金礦。銀礦。銅礦。鐵礦。錫礦。鉛礦。銻礦。鎳礦。鈷礦。鋅礦。鋁礦。汞礦。鉍礦。鉬礦。鉑礦。銥礦。鉻礦。鈾礦。銧礦。鎢礦。鎂礦。釩礦。鉀礦。硫磺礦。燐礦。砒礦。水晶。石棉。雲母。石膏。岩鹽。明礬。金剛石。天然鹼。重晶石。硝酸鹽。硼砂。筆鉛。綠松石。弗石。火粘土。滑石。磁土。大理石。苦土石。煤炭類。石油類。煤氣類。琢磨沙類。顏料石類。其他經國民政府指定者。
+
+* 3 探礦、採礦及其附屬事業為礦業。
+
+* 4 探礦權、採礦權，均為礦業權。
+
+* 5 第二條所列各礦，除第九條所定國營及第十條所定國家保留區外，中華民國人得依本法取得礦業權，但所在地之縣市政府有優先權。前項中華民國人經營礦業，如係公司組織，以股份有限公司為限，得許外國人入股，但須受左列各款之限制。一、公司股份總額過半數，應為中華民國人所有。二、公司董事過半數以上，應為中華民國人民。三、公司董事長及總經理等職，應以中華民國人民充任。
+
+* 6 土地區域，依本法取得礦業權之登記者，為礦區。礦區之境界，以直線定之，由地面境界線之直下為限。二以上之礦區相鄰接時，其鄰接之界限，至少須有二十公尺之距離。
+
+* 7 礦區之地面水平面積，煤礦以十五公頃至五百公頃為限，其他各礦以二公頃至二百五十公頃為限，砂礦在河底不便計算面積者，沿河身計其長度以一公里至五公里為限。前項礦區面積之最大限度，如因特別情形，經農礦部派員或令省主管官署派員查勘，認為必要時，得增加之。
+
+* 8 採礦之區域其面積不及前條所定之最小限度者，為小礦業。
+
+* 9 鐵礦、石油礦、銅礦及適合煉冶金焦之煙煤礦，應歸國營，由國家自行探採，如無自行探採之必要時，得出租探採。但承租人以中華民國人為限。媒氣礦含有氰質者，政府對於煤氣，得保留提取氰質之權。鐵礦、石油礦、銅礦等礦產，政府有先買權。前項礦產輸出國外之數量及期限，其契約經中央主管機關之核准，方為有效，遇必要時，仍得加以限制。
+
+* 10 前條各礦及左列各礦，農礦部認為有保留之必要時，得劃定區域作為國家保留區，禁止探採。一、鎢礦。二、錳礦。三、鋁礦。四、銻礦。五、鈾礦。六、銧礦。七、鉀礦。八、燐礦。
+
+* 11 凡最先發現第九條及第十條所列各礦者，應即呈報農礦部，經農礦部查明確係該呈報人最先發現，並認為必須國家自行開採或作為國家保留區時，應給予呈報人覓礦實際費用五倍以上之獎勵金。
+
+* 12 礦業權視為物權，除本法有特別規定外，準用關於不動產諸法律之規定。
+
+* 13 礦業權不得分割。
+
+* 14 礦業權除繼承、讓與、抵押、滯納處分及強制執行外，不得為權利之目的。前項礦業權之抵押，以採礦權為限。
+
+* 15 探礦權以二年為限。
+
+* 16 採礦權不得過二十年，限滿後，得呈經農礦部核准展限。但展限不得過二十年。
+
+* 17 左列各事項，應呈經農礦部核准，並應於核准後，呈請省主管官署登記。一、礦業權之設定、變更、移轉。二、探礦權作抵押時，其抵押權之設定、變更、移轉。農礦部於前項第一款事項之核准，應填發礦業執照或批注執照。
+
+* 18 左列各事項，應經省主管官署登記。一、礦業權之消滅及處分之限制。二、採礦權作抵押時，其抵押權之消滅及處分之限制。
+
+* 19 呈請設定礦業權者，應具呈請書附礦區圖，呈由省主管官署轉農礦部核准，如係呈請採礦時，並應添具礦床說明書。前項呈請有關之事項，省主管官署或農礦部認為必要時，得派員或令該管地方官署查勘。
+
+* 20 前條第一項呈請書礦區圖及說明書應各備一份，同時呈報所在地縣市政府，縣市政府不於接到呈報後六個月內，向上級主管官署聲請自行開採者，視為拋棄第五條所定之優先權。縣市政府自行開採時，應給原呈請人以相當之價金，其礦業權如因第四十一條之規定被撤銷時，原呈請人有取得該礦業權之優先權。
+
+* 21 礦業呈請人所具呈請書、礦區圖、礦床說明書有不完備時，省主管官署或農礦部，得限期令其更正或補呈，如不依限更正或補呈，應將呈請案撤銷。
+
+* 22 左列各地域內，不得呈請設定礦業權。一、於砲台、要塞、軍港及一切軍用局廠有關係曾經圈禁之地點以內，未經該管官署准許者。二、距商埠市場地界一公里以內，未經該管官署准許者。三、距國有公有建築物、國葬地、鐵路、公用道路、緊要水利及不能移動之著名古蹟等地界十五公丈以內，未經該管官署或所有人及占有人准許者。
+
+* 23 礦業呈請人得呈請增減其礦業呈請地。
+
+* 24 農礦部或省主管官署對於探礦呈請地，確認為適於採礦者，得限期令原呈請人呈請採礦，如不依限呈請，得撒銷其呈請案，另許他人呈請採礦。農礦部或省主管官署認採礦呈請地，仍須探礦者，準用前項之規定。
+
+* 25 二以上之礦業呈請地相重複者，如礦質為同種，其重複之部分應以呈請省主管官署在先者，有取得礦業權之優先權。前項呈請，如呈請書到達之年月日相同，省主管官署應限期令各該呈請人協商後，再行呈請，各該呈請人如不依限協商呈請時，省主管官署應以抽籤之法，決定優先權者。
+
+* 26 探礦呈請地與採礦呈請地相重複時，如係同時呈請，且礦質為同種，其重複之部分，採礦呈請人有取得礦業權之優先權。
+
+* 27 探礦呈請人對於同種之礦質，更為採礦之呈請，如呈請地與他人採礦呈請地有重複時，其探礦呈請書到達之日即視為採礦呈請書到達之日。
+
+* 28 探礦呈請地與他人礦區相重複，如礦質為同種，其重複之部分不得核准。
+
+* 29 採礦呈請地與他人礦區相重複，如礦質為同種，其重複之部分不得核准，但有第三十八條之情事者，不在此限。
+
+* 30 探礦呈請地，如有他人更為採礦之呈請，而礦質為同種，他人呈請採礦之重複部分，準用第二十四條第一項之規定。
+
+* 31 礦業呈請地與他人礦業呈請地或與他人礦區相重複，如礦質為異種，省主管官署應即通知呈請在先者或礦業權者。呈請在先者或礦業權者自接到前項通知日起九十日內，有取得礦業權之優先權。前項之規定於第三十八條之情事，已經礦業權者承諾時，不適用之。
+
+* 32 探礦權者於探礦期間屆滿後三十日內，對於該區域內同種礦質，有取得礦業權之優先權。
+
+* 33 礦業呈請地之位置形狀與礦床之位置形狀不合，致損礦利時，農礦部或省主管官署得限期令呈請人更正，如不依限呈請更正。應撒銷其呈請案。前項之情事，呈請人亦得自請更正。
+
+* 34 農礦部或省主管官署認礦業呈請地為妨害公益或無經營之價值時，得不予核准。
+
+* 35 礦業呈請地之一部與他人礦區相重複，致錯誤核准時，農礦部或省主管官署得限期令原呈請人訂正。
+
+* 36 礦業權者對於核准之礦區呈請增減、訂正、合併、分割時，應具呈請書，並附新舊關係礦區圖及理由書，呈經省主管官署轉農礦部核准。前項之呈請如有查勘之必要或圖件不完備時，適用第十九條第二項及第二十一條之規定。
+
+* 37 礦區之位置形狀與礦床之位置形狀不合，致損礦利時，農礦部或省主管官署得限期令其訂正。
+
+* 38 礦業權者因礦床之位置形狀必須掘進鄰接礦區時，應與鄰接礦業權者協商，取其承諾字據，並附礦床圖說，呈由省主管官署轉農礦部將礦區增改。因前項情事與鄰接礦業權者協商時，鄰接礦業權者如無正當理由，不得拒絕。
+
+* 39 礦業權者在礦區之外，因洩水通氣及運輸開掘隧峒發現礦質時，或在礦區內之同一礦床發現異種礦質時，應即呈報省主管官署轉農礦部核辦。前項礦區外發現之礦質，省主管官署認為有開採之價值，而不能單獨開採者，得限期令其增區。
+
+* 40 礦業權移轉時，其移轉前，礦業權者關於該礦業權之權利義務，亦隨之移轉。
+
+* 41 礦業權有左列情事之一時，其礦業權應即撤銷。一、登記後無不可抗力之故障，二年內不開工或中途停工一年以上者。二、將礦業權移轉或抵押於外國人者。三、礦業有害公益無法補救者。四、無正當理由不納礦稅兩期以上者。五、無正當理由不依第三十五條及第三十七條之規定，訂正礦區者。
+
+* 42 礦業權之處分受限制時，不得廢業。
+
+* 43 採礦權被撒銷或自行廢業後，原礦業權者得儘一年內，自行處分其他礦業財產。但因特別情形，並於礦利無妨害時，得呈請農礦部核准展限一年。
+
+* 44 採礦權者以採礦權為抵押時，應具呈請書，並附抵押契約，呈經省主管官署轉呈農礦部核准。
+
+* 45 抵押權設定後，採礦權者如欲將礦區分割、合併，減少或增加時，須經抵押權者之承諾。
+
+* 46 採礦權滿期之銷滅，不受抵押權之拘束。
+
+* 47 省主管官署關於設定抵押權之採礦權，為撤銷或廢棄之登記時，應即通知抵押權者。抵押權者受前項之通知後六十日內，得請求拍賣其礦業權。但因第四十一條第三款之情事而撤銷者，不得請求拍賣。採礦權，於前項規定期間內及至拍賣程序完結之日止，於拍賣目的之範圍內，仍視為存續。前項礦業權拍定人所承受之採礦權，視為自原採礦權銷滅登記之日起承受。
+
+* 48 國營礦業由農礦部管理之。
+
+* 49 凡國營之礦應由農礦部劃定礦區，設定國營礦業權，呈請行政院備案，並令交該礦區所在地主管官署登記。
+
+* 50 國營之礦，國家自行探採時，得用公司組織，准許私人入股，但外國人入股時，仍適用第五條第二項之規定。
+
+* 51 國營礦業權出租時，其承租條件由農礦部與承租人以契約定之。前項租約應載明承租期限及每年租金，並應斟酌該礦實地情形，定明每年最低產額及每年最低投資額。
+
+* 52 國營礦業權在未經核准私人承租前，於同等條件之下，該管地方政府有承租之優先權。如呈請者同係私人，以呈請農礦部在先者，有承租之優先權。
+
+* 53 承租人不得將所租國營礦業權轉租、抵押、典質或讓與。
+
+* 54 國營礦業權之租期以二十年為限，期滿如非國家收回自營者，承租人有繼續租賃之優先權。承租人依左列之規定，按年繳納租金。一、淨盈餘在實收資本百分之十以下者免租。二、淨盈餘超過實收資本百分之十者，而在百分之三十五以內，應就其超過部分，繳納百分之五十之租金。三、淨盈餘超過實收資本百分之三十五者，就其未超過百分之三十五之部分，依前款規定繳納租金外，並應就其已超過百分之三十五部分，繳納百分之七十五之租金。
+
+* 55 租期屆滿，國家收回自辦時，對於原承租人礦業上適用之財產或設備，應公平估價收買之，如租期屆滿，國家無收回之必要時，應准原承租人繼續立約承租。
+
+* 56 承租人有左列各款情事之一時，其租約應即撒銷。一、違背第五十三條之規定者。二、逾期不繳租金者。三、承租後三年內，向未從事礦廠設備，並無正當理由者。四、承租後二年內，尚未開工或中途停工至一年以上，並無正當理由者。
+
+* 57 因前條各款情事，撤銷租約時，原承租人所有礦業上附屬財產及一切設備，除屬於保安範圍或由國家收買者外，應於半年內，遷去之。但因特別情形，呈經農礦部許可者，不在此限。
+
+* 58 第十四條、第十五條、第十六條、第四十一條及第四十三條之規定，於國營礦業不適用之。
+
+* 59 小礦業權於合於左列各款情事之一時，得設定之。一、交通不便地方，經該省主管官署呈明農礦部核准為小礦業區域者。二、礦量甚微，無大規模經營之價值者。三、礦業未發達之區域，其礦產物為該地方所需要者。前項第一款之小礦業區域，經該省主管官署呈請或農礦部認為必要時，得撤銷之。
+
+* 60 小礦業權以採礦為限。
+
+* 61 小礦業不得加入外國資本。
+
+* 62 小礦業權以十年為限，期清後，如與礦利無妨害時，得呈准展限五年。但遇第五十九條第一項第一款或第三款所規定之情事銷滅時，不得展限。小礦業之存在，不得妨礙礦業權之呈請。但呈請礦區如與小礦區重複時，應聽由小礦業權者在核准期內，繼續開開。但期滿後，不得再展。
+
+* 63 呈請設立小礦業權者，應具呈請書並附礦區圖，呈請省主管官署核准登記，發給小礦業執照。但須同時呈報農礦部備案。前項之小礦業執照，由農礦部預先頒發省主管官署。
+
+* 64 農礦部對於前條之核准，認為違背第五十九條之規定時，得撤銷之。
+
+* 65 小礦業權者於限期內或限期屆滿後六個月內，依第三十六條之規定，呈請合併各小礦區時，有取得礦業權之優先權。
+
+* 66 第九條、第十五條、第十六條、第九十五條、第九十八條、常九十九條及第一百零一條之規定，於小礦業不適用之。
+
+* 67 礦業實在使用地面為用地。
+
+* 68 覓礦人，礦業呈請人或礦業權者，於必要時，得於他人地面為測量或查勘等事。但須經所在地地方官署許可。得前項之許可實行測量或查勘時，應先通知土地占有人。
+
+* 69 因測量查勘等事，必須除去障礙物者，應商得土地所有人或土地占有人承諾。不能得前項承諾時，應呈請所在地地方官署許可除去障礙物，並通知土地所有人或土地占有人。
+
+* 70 礦業權者為防禦礦業上緊急之危險，得入他人之地面或使用之。但應即行呈報所在地地方官署，並通知土地所有人或土地占有人。
+
+* 71 因前三條之情事，土地所有人或土地占有人如受損失，覓礦人礦業呈請人或礦業權者應給予相當之償金。
+
+* 72 礦業權者因礦業需要使用他人土地在二十四小時以內，並不妨害地面及其附屬物時，得於事先一日將使用目的通知土地所有人或土地占有人、土地所有人或土地占有人非有正當理由不得拒絕。
+
+* 73 礦業權者因左列各款之一，有必要時得使用他人土地。一、開鑿井隧。二、堆積礦產物、土石、爆發藥、薪炭、礦渣、灰燼或一切礦用材料。三、建築礦業廠庫或其需要房屋。四、設置大小鐵路、運路、運河、水管、汽管、溝渠、地井、索道或電線等。五、設施其他礦業上必要之各種工事或工作物。
+
+* 74 依前條之規定使用他人土地，應經省主管官署許可，並應將施工計畫繪具圖說，呈由省主管官署審定。省主管官署為前項之許可後，應即公告，並通知土地所有人及關係人。經前項之公告或通知後，礦業權者為取得關於該土地之權利，應與土地所有人及關係人商定之。第一項之規定如土地為公有時，省主管官署於許可前，應徵求該土地主管人之同意。第二十二條所列各地域及地方重要公共事業所需之地域，經省主管官署查明，認為不應為礦業使用地者，不得許可。
+
+* 75 礦業權者於其礦區以內之土地，除因礦業必須使用者外，如無正當理由，不得禁阻鄰接礦業權者礦業必須之使用。
+
+* 76 礦業權移轉時，使用地面之權利義務，均應隨時移轉，若喪失礦業權，亦同時喪失其使用地面之權利。
+
+* 77 因使用他人之土地礦業權者，應給予土地所有人及關係人以相當之償金。
+
+* 78 土地須使用三年以上或因使用而變其性質時，礦業權者得與土地所有人協商，或由土地所有人請求，給予一次之相當價金。但礦業廢止或使用完竣時，仍應將土地交還原土地所有人。
+
+* 79 因礦業工作致用地或礦區以外土地之價值，低減或有他項之損失時，礦業權者應給予土地所有人及關係人以相當之償金。但其土地如失從前之效用時，準用前條之規定。
+
+* 80 於使用之土地，須增築或修改其道路、溝渠、牆棚及其他工作物等，除已依第七十八條之規定，給予一次償金者外，礦業權者應給予士地所有人及關係人以相當之償金。
+
+* 81 數礦業權者共同損害地面及附屬物時，應連帶負損害賠償責任，不能證明孰為加損害者亦同。
+
+* 82 經第七十四條第二項公告或通知後，土地所有人或關係人欲變更其土地之形質或新築改築大修繕或增設其他工事時，應經省主管官署許可，未經許可者，不得請求損害賠償。前項工事如與礦業之性質絕對不相容，或無損於建築者而大有損於礦利時，礦業權者得呈請省主管官署查明禁止施工。
+
+* 83 土地所有人提出損害賠償之要求，或明知其地面已受損害後，故意興工建築其建築物，如有損害不得要求賠償。土地所有人於地面有非常顯著之危險，而急於注意興工建築者，亦適用前項之規定。
+
+* 84 經第七十四條第二項公告或通知後，其礦業如有廢止或變更，礦業權者對於土地所有人或關係人因此所受之損失，應給以相當之償金。
+
+* 85 土地所有人及關係人對於償金，得要求礦業權者提出相當之擔保。
+
+* 86 礦業權者如不交償金或不具擔保，土地所有人及關係人得拒絕其使用。
+
+* 87 土地之權利在使用期間，應歸礦業權者。其他已設定之權利，亦須停止。但不妨害使用者，不在此限。
+
+* 88 土地之使用完竣，礦業權者應回復其土地之原狀，交還原土地所有人。如因不能回復原狀致有損失時，除依第七十八條之規定，給予一次償金者外，應給予土地所有人以相當之償金。
+
+* 89 關於用地之規定，於水之使用準用之。
+
+* 90 本章關於礦業權者之規定，於國營礦業權之承租人準用之。
+
+* 91 礦稅分左列二種，由礦業權者分別繳納。一、礦區稅。二、礦產稅。國營礦業權出租時，前項礦稅由承租人繳納之。
+
+* 92 礦區稅為地面租稅以外之稅，其稅率如左。一、探礦區，每公畝按年納國幣一分，砂礦在河底者，每河道長十公尺，按年納國幣一分。二、採礦區，每公畝或河道每長十公尺，自開辦起五年內，按年納國幣二分，自第六年起，按年納國幣五分。採礦權者，因礦工、罷工或其他不可抗力，致不能工作繼續在二個月以上時，得請求免納不能工作期間之礦區稅。
+
+* 93 礦產稅，按照礦產物價格，納百分之二。前項之礦產物價格，以出產地附近市場之平均市價為標準，由農礦部按照省主管官署報告，核定之。
+
+* 94 礦區稅每年分二期，於一月七月繳納。礦產稅依照實際產額約計市價，按月繳納。前項按月繳納之礦產稅額，於核定平均市價後逐年清結，年終繳納之。
+
+* 95 農礦部或省主管官署認為必要時，得令採礦權者隨時將施工計劃及工程報告書呈候審核。前項呈報之施工計劃及工程報告書，農礦部或省主管官署認為必須變更時，得令礦業權者變更之。
+
+* 96 農礦部或省主管官署，對於礦業工程認為有危險或害公益時，應令礦業權者設法預防或暫行停止工作。
+
+* 97 礦業權銷滅後一年內，農礦部或省主管官署認為必要時，得令原礦業權者為預防危險之設備。
+
+* 98 採礦權者應備置坑內實測圖及礦業簿於礦業事務所，並繕具副本，送呈省主管官署。
+
+* 99 礦業權者每年一月應將全年之礦業情形，造具明細表冊，呈報農礦部及省主管官署。
+
+* 100 探礦時所得礦質，須經省主管官署准許，方得出售。
+
+* 101 礦業權者所用主要技術人員，應就依技師登記法登記合格者，選任之。前項技術人員有不合格或不稱職時，農礦部或省主管官署得令其改任。
+
+* 102 農礦部為監察各礦礦業越見，得於礦業繁盛區域或重要礦場，設置礦業監察員。礦業監察員規程，由農礦部以部令定之。
+
+* 103 礦業權者遇有事故，有查勘鄰接礦區之必要時，得呈請農礦部或省主管官署派員會同各該礦業權者，實地查勘。前項規定，於其他利害關係人適用之。
+
+* 104 農礦部或省主管官署，以職權或因礦業呈請人或礦業權者之呈請，派員赴礦業呈請地或礦區查勘時，其費用應歸該呈請人或礦業權者負擔。
+
+* 105 凡專門以上學校礦科學生，願在礦場實習者，經農礦部或省主管官署令知後，各該礦業權者不得無故拒絕。實習規則由農礦部定之。
+
+* 106 省主管官署每年應將該管區域內，礦區面積、礦質、產額、礦稅收入，分別查明，編成詳細統計，於四月以前，彙呈農礦部。
+
+* 107 本章關於礦業權者之規定，於國營礦業權之承租人適用之。
+
+* 108 有左列情形之一者，處三年以下之有期徒刑，或三千元以下之罰金。一、以詐欺取得礦業權或違法私自採礦者。二、有第四十一條第二款情形者。
+
+* 109 有左列情形之一者，處二千元以下之罰金，其契約無效。一、私將礦業權租賃典質者。二、不經核准，將礦業權讓與或抵押者。
+
+* 110 逾出礦業以外採礦者，處一千元以下之罰金。
+
+* 111 有前條及第一百零八條第一款情形者，沒收其所採之礦產物，如已出售或自用者，應追繳其相當代價。
+
+* 112 違背第二十二條之規定，或不從第九十六條及第九十七條之命令者，處五百元以下之罰金。
+
+* 113 違背第九十五條第二項第一百條及第一百零一條之規定者，處二百元以下之罰金。
+
+* 114 違背第六十九條之規定者，處一百元以下之罰金。
+
+* 115 拒絕或妨礙該管官吏檢查關於礦業之簿記或物件者，處五十元以下之罰金。
+
+* 116 凡逃稅或企圖逃稅者，處應納稅額三倍以上之罰金。
+
+* 117 礦業權者於其代理人僱用人或其他之從業者，關於業務違犯本法時，不得以非出己意，免本法之處罰。
+
+* 118 本章關於礦業權者之規定，於國營礦業權之承租人適用之。
+
+* 119 在本法施行前，已取得礦業權者，視為已依本法取得礦業權。但其原定期限較本法所定期限為短者，依其期限。
+
+* 120 本法施行細則，由農礦部定之。
+
+* 121 本法施行日期，以命令定之。
+
