--- a/司法-民事/公司法.md
+++ b/司法-民事/公司法.md
@@ -22,9 +22,9 @@
 
 * 12 公司設立登記後，有應登記之事項而不登記，或已登記之事項有變更而不為變更之登記者，不得以其事項對抗第三人。
 
-* 13 公司不得為他公司之無限責任股東或合夥事業之合夥人，如為他公司之有限責任股東時，其所有投資總額，不得超過自己公司實收股本四分之一，並應依第十四條規定辦理；但以投資為專業者，不在此限。公司負責人,違反本條之規定時，各科四千元以下罰金，並賠償公司因此所受之損害。
+* 13 公司不得為他公司之無限責任股東或合夥事業之合夥人，如為他公司之有限責任股東時，其所有投資總額除以投資為專業者外，不得超過自己公司實收股本三分之一。但國營事業經法定程序核定者以二分之一為限。公司負責人違及本條之規定時，各科四千元以下罰金，並賠償公司因此所受之損害。
 
-* 14 公司因擴充生產設備，增加固定資產，或轉投資其他事業時，應按其所需資金增加資本或發行新股，不得舉債。其以政府核准之長期債款，或約定之分期付款增加固定資產者，於每期清償時，亦應辦理增資，或發行新股。前項擴充設備，未達生產設備四分之一時，得以特別盈餘公積先行支付，而於達四分之一時，再行增資或發行新股。公司負責人違反本條之規定時，各科四千元以下罰金，並賠償公司因此所受之損害。
+* 14 公司因擴充生產設備而增加固定資產，其所需資金，不得以短期債款支應。短期債款之期限，由行政院以命令定之。公司負責人違反本條之規定時，各科四千元以下罰金，並賠償公司因此所受之損害。
 
 * 15 公司不得經營其登記範圍以外之業務。公司之資金，不得借貸與其股東或其他個人。公司負責人違反本條之規定時，得各科四千元以下罰金，並賠償公司因此所受之損害。
 
@@ -474,11 +474,11 @@
 
 * 238 左列金額，應累積為資本公積：一、超過票面金額發行股票所得之溢額。二、每一營業年度，自資產之估價增值，扣除估價減值之溢額。三、處分資產之溢價收入。四、自因合併而消滅之公司，所承受之資產價額，減除自該公司所承擔之債務額及向該公司股東給付額之餘額。五、受領贈與之所得。
 
-* 239 前二條之公積，除填補公司虧損外，不得使用之。但第二百四十一條規定之情形，或法律另有規定者，不在此限。公司非於盈餘公積填補資本虧損，仍有不足時，不得以資本公積補充之。
+* 239 前二條之法定盈餘公積及資本公積，除填補公司虧損外，不得使用之。但第二百四十一條規定之情形，或法律另有規定者，不在此限。公司非於盈餘公積填補資本虧損，仍有不足時，不得以資本公積補充之。
 
 * 240 公司得由有代表已發行股份總數三分之二以上股東出席之股東會，以出席股東表決權過半數之決議，將應分派股息及紅利之全部或一部，以發行新股之方式為之，其不滿一股之金額，以現金分派之。前項發行新股，於為前項決議之股東會終結時，即生效力，董事會應即分別通知各股東或記載於股東名簿之質權人，其發行無記名股票者，並應公告之。
 
-* 241 公司於股份總數全部發行後，得依前條第一項之股東會決議增加資本，將公積之全部或一部撥充資本，按股東原有股份之比例發給新股。前條第二項之規定於前項準用之。以第二百三十七條第一項之法定盈餘公積撥充資本者，以該項公積已達資本總額，並以撥充其半數為限。以公積撥充資本者，不得視為第十四條第一項之增資，但在原為準備擴充設備資金所需而提之特別盈餘公積提存額內撥充者，不在此限。
+* 241 公司於股份總數全部發行後，得依前條第一項之股東會決議增加資本，將公積之全部或一部撥充資本，按股東原有股份之比例發給新股。前條第二項之規定於前項準用之。以第二百三十七條第一項之法定盈餘公積撥充資本者，以該項公積已達資本總額，並以撥充其半數為限。
 
 * 242 依第四百十九條第一項第五款所支出之費用，及為設立登記所支出之規費，得列入資產負債表之資產項下。前項金額應於開業後五年內之每一決算期，平均攤銷之。
 
