--- a/行政-經濟及能源/礦業法.md
+++ b/行政-經濟及能源/礦業法.md
@@ -2,13 +2,13 @@
 
 * 1 中華民國領域內之礦，均為國有，非依本法取得礦業權，不得探採。
 
-* 2 本法所稱之礦為左列各種：金礦。銀礦。銅礦。鐵礦。錫礦。鉛礦。銻礦。鎳礦。鈷礦。鋅礦。鋁礦。汞礦。鉍礦。鉬礦。鉑礦。銥礦。鉻礦。鈾礦。銧礦。鎢礦。錳礦。鎂礦。釩礦。鉀礦。硫磺礦。燐礦。砒礦。水晶。石棉。雲母。石膏。岩鹽。明礬。金剛石。天然鹼。重晶石。硝酸鹽。硼砂。筆鉛。綠松石。弗石。火粘土。滑石。磁土。大理石。苦土石。煤炭類。石油類。煤氣類。琢磨沙類。顏料石類。其他經國民政府指定者。
+* 2 本法所稱之礦為左列各種。金礦。銀礦。銅礦。鐵礦。錫礦。鉛礦。銻礦。鎳礦。鈷礦。鋅礦。鋁礦。汞礦。鉍礦。鉬礦。鉑礦。銥礦。鉻礦。鈾礦。銧礦。鎢礦。錳礦。釩礦。鉀礦。硫磺礦。燐礦。砒礦。水晶。石棉。雲母。石膏。岩鹽。明礬。金剛石。天然鹼。重晶石。硝酸鹽。硼砂。筆鉛。綠松石。弗石。火粘土。滑石。長石。磁土。大理石：包括方解石。苦土石：包括白雲石。煤炭類。石油類。煤氣類。寶石類：包括玉。琢磨沙類。顏料石類。其他經國民政府指定者。
 
 * 3 探礦、採礦及其附屬事業為礦業。
 
 * 4 探礦權、採礦權，均為礦業權。
 
-* 5 第二條所列各礦，除第九條所定國營及第十條所定國家保留區外，中華民國人得依本法取得礦業權，但所在地之縣市政府有優先權。前項中華民國人經營礦業，如係公司組織，以股份有限公司為限，得許外國人入股，但須受左列各款之限制。一、公司股份總額過半數，應為中華民國人所有。二、公司董事過半數以上，應為中華民國人民。三、公司董事長及總經理等職，應以中華民國人民充任。
+* 5 第二條所列各礦，除第九條所定國營及第十條所定國家保留區外，中華民國人得依本法取得礦業權。中央政府及地方政府設定前項礦業權，均應依本法之規定。中央政府及地方政府設定礦業權後，得准許外國人入股，合組股份有限公司，經營礦業。但應經行政院核准，並受左列各款之限制。一、公司股份總額過半數，應為中華民國中央或地方政府所有。二、公司董事過半數以上，應為中華民國中央或地方政府所派之代表人。三、公司董事長及總經理等職，應由中華民國中央或地方政府選派。前項中外合辦礦業之規定，不適用民營礦業，但前已依法成立之民營中外合辦礦業，得繼續有效。
 
 * 6 土地區域，依本法取得礦業權之登記者，為礦區。礦區之境界，以直線定之，由地面境界線之直下為限。二以上之礦區相鄰接時，其鄰接之界限，至少須有二十公尺之距離。
 
@@ -16,9 +16,9 @@
 
 * 8 採礦之區域其面積不及前條所定之最小限度者，為小礦業。
 
-* 9 鐵礦、石油礦、銅礦及適合煉冶金焦之煙煤礦，應歸國營，由國家自行探採，如無自行探採之必要時，得出租探採。但承租人以中華民國人為限。媒氣礦含有氰質者，政府對於煤氣，得保留提取氰質之權。鐵礦、石油礦、銅礦等礦產，政府有先買權。前項礦產輸出國外之數量及期限，其契約經中央主管機關之核准，方為有效，遇必要時，仍得加以限制。
+* 9 鐵礦，石油礦銅礦及適於煉冶金焦或煉油之豐富煤礦，應歸國營，由國家自行探採，如無自行探採之必要時，得出租採探。但承租人以中華民國人為限。媒氣礦含有氰質者，政府對於煤氣得保留提取氰質之權。鐵礦，石油礦，銅礦等礦產，政府有先買權。前項礦產輸出國外之數量及期限，其契約經中央主管機關之核准，方為有效，遇必要時，仍得加限制。第一項適合煤治金焦或煉油之豐富煤礦，其標準由實業部定之。
 
-* 10 前條各礦及左列各礦，農礦部認為有保留之必要時，得劃定區域作為國家保留區，禁止探採。一、鎢礦。二、錳礦。三、鋁礦。四、銻礦。五、鈾礦。六、銧礦。七、鉀礦。八、燐礦。
+* 10 前條各礦及左列各礦實業部認為有保存或調節供求之必要時，得指定區域作為國家保留區禁止探取。一、鎢礦。二、錳礦。三、鋁礦。四、銻礦。五、鈾礦。六、銧礦。七、鉀礦。八、燐礦。九、鉬礦。十、其他由實業部呈准行政院指定者。
 
 * 11 凡最先發現第九條及第十條所列各礦者，應即呈報農礦部，經農礦部查明確係該呈報人最先發現，並認為必須國家自行開採或作為國家保留區時，應給予呈報人覓礦實際費用五倍以上之獎勵金。
 
@@ -38,7 +38,7 @@
 
 * 19 呈請設定礦業權者，應具呈請書附礦區圖，呈由省主管官署轉農礦部核准，如係呈請採礦時，並應添具礦床說明書。前項呈請有關之事項，省主管官署或農礦部認為必要時，得派員或令該管地方官署查勘。
 
-* 20 前條第一項呈請書礦區圖及說明書應各備一份，同時呈報所在地縣市政府，縣市政府不於接到呈報後六個月內，向上級主管官署聲請自行開採者，視為拋棄第五條所定之優先權。縣市政府自行開採時，應給原呈請人以相當之價金，其礦業權如因第四十一條之規定被撤銷時，原呈請人有取得該礦業權之優先權。
+* 20 礦區之位置界限及面積，以礦區圖基點及測點間各距離角度為準，如按兩基點各別測定而結果不一致時，應以按第一基點測定者為準。
 
 * 21 礦業呈請人所具呈請書、礦區圖、礦床說明書有不完備時，省主管官署或農礦部，得限期令其更正或補呈，如不依限更正或補呈，應將呈請案撤銷。
 
@@ -80,7 +80,7 @@
 
 * 40 礦業權移轉時，其移轉前，礦業權者關於該礦業權之權利義務，亦隨之移轉。
 
-* 41 礦業權有左列情事之一時，其礦業權應即撤銷。一、登記後無不可抗力之故障，二年內不開工或中途停工一年以上者。二、將礦業權移轉或抵押於外國人者。三、礦業有害公益無法補救者。四、無正當理由不納礦稅兩期以上者。五、無正當理由不依第三十五條及第三十七條之規定，訂正礦區者。
+* 41 礦業權有左列情事之一時，其礦業權應即撤銷。一、登記後無不可抗力之故障，二年內不開工或中途停工一年以上者。二、將礦業權移轉或抵押於外國人者。三、礦業有害公益無法補救者。四、無正當理由不納礦稅兩期以上者。五、無正當理由不依第三十五條及第三十七條之規定訂正礦區者。六、以詐欺取得礦業權經法院依第一百零八條之規定處罰者。七、民營礦業違背第五條第四項之規定確有證據者。
 
 * 42 礦業權之處分受限制時，不得廢業。
 
@@ -94,11 +94,11 @@
 
 * 47 省主管官署關於設定抵押權之採礦權，為撤銷或廢棄之登記時，應即通知抵押權者。抵押權者受前項之通知後六十日內，得請求拍賣其礦業權。但因第四十一條第三款之情事而撤銷者，不得請求拍賣。採礦權，於前項規定期間內及至拍賣程序完結之日止，於拍賣目的之範圍內，仍視為存續。前項礦業權拍定人所承受之採礦權，視為自原採礦權銷滅登記之日起承受。
 
-* 48 國營礦業由農礦部管理之。
+* 48 國營礦業由實業部管理，或由實業部呈准行政院委託其他官署辦理。
 
 * 49 凡國營之礦應由農礦部劃定礦區，設定國營礦業權，呈請行政院備案，並令交該礦區所在地主管官署登記。
 
-* 50 國營之礦，國家自行探採時，得用公司組織，准許私人入股，但外國人入股時，仍適用第五條第二項之規定。
+* 50 國營之礦國家自行探採時，得用公司組織，准許私人入股，但外國人入股時，仍適用第五條第三項之規定。
 
 * 51 國營礦業權出租時，其承租條件由農礦部與承租人以契約定之。前項租約應載明承租期限及每年租金，並應斟酌該礦實地情形，定明每年最低產額及每年最低投資額。
 
@@ -120,7 +120,7 @@
 
 * 60 小礦業權以採礦為限。
 
-* 61 小礦業不得加入外國資本。
+* 61 小礦業之呈請地，如有他人更為礦業權設定之呈請時，經查明後如合於第五十九條第一項各款之一者，該小礦業呈請案仍然有效。前項小礦業呈請案核准後，其小礦業權於期滿時不得再展。
 
 * 62 小礦業權以十年為限，期清後，如與礦利無妨害時，得呈准展限五年。但遇第五十九條第一項第一款或第三款所規定之情事銷滅時，不得展限。小礦業之存在，不得妨礙礦業權之呈請。但呈請礦區如與小礦區重複時，應聽由小礦業權者在核准期內，繼續開開。但期滿後，不得再展。
 
@@ -152,7 +152,7 @@
 
 * 76 礦業權移轉時，使用地面之權利義務，均應隨時移轉，若喪失礦業權，亦同時喪失其使用地面之權利。
 
-* 77 因使用他人之土地礦業權者，應給予土地所有人及關係人以相當之償金。
+* 77 因使用他人之土地礦業權者，應給予土地所有人及關係人以相當之償金。因使用土地其定著物必須遷移者，礦業權者應給予必要之遷移費，但以確有原主者為限。
 
 * 78 土地須使用三年以上或因使用而變其性質時，礦業權者得與土地所有人協商，或由土地所有人請求，給予一次之相當價金。但礦業廢止或使用完竣時，仍應將土地交還原土地所有人。
 
@@ -214,7 +214,7 @@
 
 * 107 本章關於礦業權者之規定，於國營礦業權之承租人適用之。
 
-* 108 有左列情形之一者，處三年以下之有期徒刑，或三千元以下之罰金。一、以詐欺取得礦業權或違法私自採礦者。二、有第四十一條第二款情形者。
+* 108 有左列情形之一者，處三年以下之有期徒刑，或三千元以下之罰金。一、以詐欺取得礦業權或違法私自採礦者。二、有第四十一條第二款情形者。三、民營礦業違背第五條第四項之規定確有證據者。
 
 * 109 有左列情形之一者，處二千元以下之罰金，其契約無效。一、私將礦業權租賃典質者。二、不經核准，將礦業權讓與或抵押者。
 
