--- a/地方制度/市組織法.md
+++ b/地方制度/市組織法.md
@@ -1,102 +1,102 @@
-* 1 市冠以所在地地名，稱為某某市。
+* 1 市之自治，除本法規定外，準用關於縣自治之規定。
 
-* 2 凡人民聚居地方，具有左列情形之一者設市，得直隸於行政院。一、首都。二、人口在百萬以上者。三、在政治上經濟上有特殊情形者。具有前項二三兩款情形之一，而為省政府所在地者，應隸屬於省政府。
+* 2 市自治實施辦法，由行政院定之。
 
-* 3 凡人民聚居地方，具有左列情形之一者設市，隸屬於省政府。一、人口在三十萬以上者。二、人口在二十萬以上，其所收營業稅、牌照費、土地稅，每年合計占該地總收入二分之一以上者。
+* 3 凡人民聚居地方，具有左列情形之一者，設市，受行政院之指揮、監督：一、首都。二、人口在百萬以上者。三、在政治、經濟、文化上有特殊情形者。
 
-* 4 市區域之劃定或變更，依左列之規定：一、隸屬於行政院之市，由行政院呈請國民政府決定。二、隸屬於省政府之市，由省政府呈經行政院轉請國民政府決定。
+* 4 凡人民聚居地方，具有左列情形之一者，得設市，受省政府之指揮、監督：一、省會。二、人口在二十萬以上者。三、在政治、經濟、文化上地位重要，其人口在十萬以上者。
 
-* 5 市劃分為區、坊、閭、鄰，除有特殊情形者外，鄰以五戶，閭以五鄰，坊以二十閭，區以十坊為限。前項區、坊、閒、鄰，均各冠以第一第二等次序。
+* 5 市之設置與廢止，及市區域之劃定或變更，應經國民政府之核淮。
 
-* 6 中華民國人民，無論男女在市區域內繼續居住一年以上，或有住所達二年以上，年滿二十歲，經宣誓登記後，為各該市之公民，有出席區民大會、坊民大會及行使選舉、罷免、創制、複決之權。有左列情事之一者，不得享有前項所定之權：一、有反革命行為，經判決確定者。二、貪官、污吏、土豪、劣紳、經判決確定者。三、褫奪公權尚未復權者。四、禁治產者。五、吸用鴉片或其代用品者。市公民在該市區域內無論遷入任何、區、坊，自登記移轉之日起，均有公民權。
+* 6 市以下為區，區內之編制為保、甲，十戶至三十戶為甲，十甲至三十甲為保，十保至三十保為區；其依地方情勢有酌量變更之必要者，應呈經上級機關之核准。
 
-* 7 宣誓須親自簽名於誓詞，赴坊公所舉行宣誓典禮，由區公所派員監誓，其誓詞如左：○○○正心誠意，當眾宣誓，從此去舊更新，自立為國民，盡忠竭力，擁護中華民國，實行三民主義，采用五權憲法，務使政治修明，人民安樂，措國基於永固，維世界之和平，此誓。中 華 民 國 年 月 日（簽名）立誓在坊公所未成立時，前項宣誓典禮於區公所舉行之。
+* 7 中華民國國民，在市區域內，繼續居住六個月以上，或有住所達一年以上，年滿二十歲，經宣誓登記後，為市公民，有依法行使選舉罷免創制複決之權。有左列情形之一者，不得有公民資格：一、褫奪公權。二、虧欠公款者。三、曾因贓私處罰有案者。四、禁治產者。五、吸用鴉片或其代用品者。
 
-* 8 市於不抵觸中央及上級機關法令範圍以內辦理左列事項：一、戶口調查及人事登記事項。二、育幼、養老、濟貧、救災等設備事項。三、糧食儲備及調節事項。四、農工商業之改良及保護事項。五、勞工行政事項。六、造林、墾牧、漁獵之保護及取締事項。七、民營公用事業監督事項。八、合作社及互助事業之組織及指導事項。九、風俗改良事項。十、教育及其他文化事項。十一、公安事項。十二、消防事項。十三、公共衛生事項。十四、醫院、菜市、屠宰場及公共娛樂場所之設置及取締等事項。十五、財政收支及預算、決算編造事項。十六、公產之管理及處分事項。十七、公營業之經營管理事項。十八、土地行政事項。十九、公用房屋、公園、公共體育場、公共墓地等建築修理事項。二十、市民建築之指導，取締事項。二十一、道路、橋樑、溝渠、堤岸及其他公共土木工程事項。二十二、河道、港務、及船政管理事項。二十三、上級機關委辦事項。二十四、其他依法令所定由市辦理事項。
+* 8 市設市政府，其職權如左：一、辦理市自治事項。二、執行上級政府委辦事項。
 
-* 9 左列各款定為市財政收入：一、土地稅。二、房捐。三、營業稅。四、牌照費。五、廣告稅。六、公產收入。七、公營業收入。八、其他依法規特許徵收之稅捐。前項第一款，第二款收入，法律別有規定者，依其規定。
+* 9 市政府於不牴觸中央及上級政府法令範圍內，得發布市令。
 
-* 10 市得依法募集建設公債。
+* 10 市政府置市長一人，綜理全市事務，並指揮、監督所屬機關及職員。
 
-* 11 市設市政府，依法令掌理本市行政事務，監督所屬機關及自治團體。
+* 11 市政府設局或科，掌理關於民政、財政、教育、建設、警察、衛生事項，設局或設科，由行政院依其事務之繁簡定之。市政府設局者，置局長、科長、科員，設科者，置科長、科員。
 
-* 12 市於不抵觸法令範圍內，得發布市令，制定市單行規則。
+* 12 院轄市市政府置秘書長一人，省轄市市政府置秘書主任一人，掌理文書、庶務及其他不屬於各局科事項。
 
-* 13 市政府設市長一人，指揮監督所屬職員。隸屬於行政院之市，市長簡任。隸屬於省政府之市，市長簡任或薦任。
+* 13 院轄市市政府，必要時得置參事一人或二人，掌理規章之撰擬事項。
 
-* 14 市政府設左列各局：一、社會局：掌理第八條第一款至第十款事項。二、公安局：掌理第八條第十一款至第十四款事項。三、財政局：掌理第八條第十五款至第十八款事項。四、工務局：掌理第八條第十九款至第二十二款事項。
+* 14 市政府因事務之需要，得置技術人員及視導人員。
 
-* 15 市政府於必要時，經上級機關之核准，得分別增設左列各局：一、教育局：掌理第八條第十款事項。二、衛生局：掌理第八條第十三款第十四款事項。三、土地局：掌理第八條第十八款事項。四、公用局：掌理第八條第七款及第十七款事項。五、港務局：掌理第八條第二十二款事項。
+* 15 院轄市市長、秘書長、參事、局長，簡任；秘書、科長，薦任；科員，委任。省轄市市長，薦任或簡任；秘書主任、局長，薦任；秘書、科長，委任或薦任；科員，委任。
 
-* 16 首都及省政府所在地之市，均不設公安局，關於公安局掌理事項，分別由首都警察廳或省會警察機關掌理之。
+* 16 市政府人員之員額及其職務之分配，按各該市人口之多寡及事務之繁簡，於各該市市政府組織規程中規定之。前項組織規程，由行政院定之。
 
-* 17 隸屬於省政府之市，應設各局。如有縮小範圍之必要時，除公安局外，得改為科。
+* 17 市政府得酌用雇員。
 
-* 18 隸屬於行政院之市，各局設局長一人簡任或薦任。隸屬於省政府之市，各局或各科設局長或科長一人，薦任或委任。
+* 18 市政府置主辦會計人員主辦統計人員各一人，掌理歲計會計統計事項，受市長之監督、指揮，並依國民政府主計處組織法之規定，直接對主計處負責。會計統計需用佐理人員名額，由各該市市政府及主計處就各該市市政府組織規程所定人員名額中，會同決定之。
 
-* 19 市政府設祕書處，掌理文牘、庶務及其他不屬於各局或各科掌理事項。市長簡任之市，設祕書長一，簡任或薦任。市長薦任之市，設祕書一人，薦任或委任。
+* 19 市政府設市政會議，以左列人員組織之：一、市長。二、秘書長或秘書主任。三、參事。四、局長或科長。五、主辦會計人員。
 
-* 20 市政府得設參事二人，簡任或薦任，掌理市單行規則或命令之纂擬審查事項。
+* 20 左列事項，應經市政會議議決：一、提出於市參議會之案件。二、市政府所屬機構辦事章則。三、市政府所屬機構間不能解決之事項。四、市長交議事項。五、其他有關市政之重要事項。
 
-* 21 各局或各科及祕書處之職員名額，除本法已有規定者外，應規定放各該市政府組織規則中，其組織規則，由上級機關核定之。
+* 21 市政會議每月至少開會一次，由市長召集之，開會時，市長主席。
 
-* 22 市政府因事務之需要，得聘用專門技術人員。
+* 22 市政會議議事細則，由該會議定之。
 
-* 23 市政府得酌用僱員。
+* 23 市設市參議會，由市公民及依法成立之職業團體選舉市參議員組織之。但由職業團體選舉之參議員，不得超過總額十分之三。
 
-* 24 市政府設市政會議，以左列人員組織之：一、市長。二、參事。三、局長或科長。市參議會成立後，得由市參議員互選代表三人至五人，出席市政會議。祕書長或祕書，應列席市政會議。
+* 24 市參議會議長、副議長，由市參議員互選之。
 
-* 25 左列事項，應經市政會議議決：一、關於祕書處及各局或各科辦事細則事項。二、關於市單行規則事項。三、關於市預算、決算事項。四、關於整理市政收入及募集市公債事項。五、關於經營市公產及公營業事項。六、關於市政府各處、局或科職權爭議事項。七、市長交議事項。八、其他重要事項。
+* 25 市參議會之組織、職權及選舉方法，另以法律定之。
 
-* 26 市政會議，每月至少開會一次，由市長召集之，以市長為主席。
+* 26 市財政依財政收支系統及關係法令之規定。
 
-* 27 市政會議議事細則，由該會議定之。
+* 27 區設區民代表會，區民代表由保民大會選舉之，每保二人，任期二年，連選得連任。區民代表違法或失職，由保民大會罷免之。
 
-* 28 市，設市參議會，由市公民選舉之參議員組織之，任期三年，每年改選三分之一。市參議員為無給職。市參議會組織法及市參議員選舉法另定之。
+* 28 區民代表會之職權如左：一、審議區規約及區與區相互間之公約。二、議決區長交議及本區內公民建議事項。三、選舉或罷免區長、副區長。四、聽取區公所報告及向區公所提出詢問事項。五、其他有關本區重要興革事項。
 
-* 29 市參議會，於區長民選時，設立之。
+* 29 區民代表會置主席一人，由代表互選之，開會時，得通知區長、保長列席。
 
-* 30 關於第二十五條第二款至第五款及第八款事項。應經市參議會議決，在市參議會閉會期間，除市單行規則、預算、決算及募集市公債外，得由市政會議議決執行，再交市參議會追認。
+* 30 區民代表會，每三個月開會一次，由主席召集之，必要時，得舉行臨時會議。
 
-* 31 關於市政興革事項，市政府得交議於市參議會，市參議會亦得建議於市政府。
+* 31 區民代表會，非有本區區民代表過半數之出席，不得開議。議案之表決，以出席代表過半數之同意行之；可否同數時，取決於主席。
 
-* 32 市參議會設議長、副議長各一人，由市參議員互選之，任期一年，得再被選。
+* 32 區民代表會決議案，送請區長分別執行，如區長延不執行，或執行不當，得請其說明理由；如仍認為不滿意時，得報請市政府核辦。
 
-* 33 市參議會，每年開常會兩次。但經市參議員五分一之請求，或議長認為必要時，應召集臨時會。
+* 33 區長對於區民代表會之決議案，如認為不當，得附理由，送請覆議；對於覆議結果，如仍認為不當時，得呈請市政府核辦。
 
-* 34 市參議會議事規則由市參議會定之。
+* 34 區設區公所，置區長一人，副區長一人，由區民代表會選舉之，受市政府之監督、指揮，辦理本區自治事項，及執行市政府委辦事項。區長副區長任期二年，連選得連任。
 
-* 35 區設區民大會，於內政部核准區長民選後舉行之。
+* 35 區公所得置助理員及雇員。
 
-* 36 區民大會，以本區之市公民出席投票，行使選舉權、罷免權、創制權、複決權。前項選舉、罷免、創制、複決之程序，另以法律定之。
+* 36 保設保民大會，由本保每戶推出一人組織之，其職權如左：一、審議保甲規約及保與保相互間之公約。二、議決保長交議及本保公民建議事項。三、選舉或罷免保長、副保長。四、選舉或罷免區民代表會代表。五、聽取保辦公處工作報告，及向保辦公處提出詢問事項。六、其他有關本保重要興革事項。
 
-* 37 區民大會，於各坊分設會場，同日舉行。
+* 37 保民大會開會時，保長主席，保長有事故時，副保長主席，保長、副保長俱有事故或與所議事項有利害關係時，由大會推舉一人主席。
 
-* 38 區民大會，每年舉行一次，由區長召集之，如有特別事件得召集臨時大會。前項臨時大會，關於區長應迴避之事件，應由區民代表會之主席召集之。
+* 38 保民大會每個月開會一次，由保長召集之；必要時，得召集臨時會議。
 
-* 39 區民大會規則，由市政府定之。
+* 39 第三十一條、第三十二條及第三十三條之規定，於保民大會準用之。
 
-* 40 區民大會鈴記，由市政府之上級機關頒給之。
+* 40 保設保辦公處，置保長一人，副保長一人，由保民大會選舉之，受區長之監督指揮，辦理本保自治事項，及執行市政府委辦事項。
 
-* 41 區設區公所，置區長一人，掌理區自治事務。
+* 41 甲設戶長會議，由本甲各戶戶長組織之，戶長有事故不能出席時，應派一人代表出席。
 
-* 42 區公所辦理左列事項：一、區民大會決定應辦事項。二、區民代表會議決交辦事項。三、區預算、決算編製事項。四、區財政收支及公款公產公營業管理事項。五、市政府委託辦理事項。六、其他法令所定應辦事項。
+* 42 戶長會議之職權如左：一、選舉或罷免甲長。二、本甲內應興革事項。
 
-* 43 左列各款，定為區公所財政收入：一、區公款及公產之孳息。二、區公營業之純利。三、依法賦與之自治款項。四、市補助金。五、其他經區民代表會議決之收入。
+* 43 戶長會議由甲長召集之，每月開會一次；必要時，經甲長或五戶以上之請求，得舉行臨時會議，開會時甲長主席，甲長有事故或與所議事項有利害關係時，由出席人推舉一人主席。
 
-* 44 區財政之收支，應於每月終公布之。
+* 44 戶長會議，非有本甲戶長過半數之出席，不得開會。議案之表決，以出席人過半數之同意行之，可否同數時，取決於主席。
 
-* 45 區長由區民大會選舉之，任期一年，得再被選，其中途被選者，以繼滿原任所餘之任期為限。區長選定後，應報由市政府彙呈上級機關備案。區長違法失職時，由區民大會罷免之。
+* 45 戶長會議決議案，由甲長執行之。
 
-* 46 公民年滿二十五歲，具有左列資格之一者，得為區長之候選人。一、候選公務員考試或普通考試、高等考試及格者。二、曾任中國國民黨區黨部執監委員或各上級黨部重要職員滿一年者。三、曾在國民政府統屬之機關，任委任官一年或薦任官以上者。四、曾任小學以上教職員或在中學以上畢業者。五、經自治訓練及格者。六、曾辦地方公益事務著有成績，經市政府呈請上級機關核定者。七、曾任區民代表會代表或坊長坊監察委員一年以上者。受國籍法第九條之限制尚未解除者，不得為前項之候選人。
+* 46 甲長認為必要，或有本甲居民十人以上之連名請求時，應舉行甲居民會議，討論議決有關本甲興革事項。
 
-* 47 前條候選人，由區公所隨時調查登記，並於每屆選舉前三月，造具候選人表冊，呈報市政府，經市政府核定後，即行公布，其公布時期不得遲於選舉前一個月。候選人表冊應分別載明候選人姓名、年齡、資格、住所及登記為市公民之時期。
+* 47 在區民代表會未成立之地方，區長、副區長由市政府委任，在保民大會未成立之地方，保長、副保長由區公所推定加倍人數，呈請市政府遴委。
 
-* 48 有左列情事之一者，雖具有第四十六條第一項各款所列資格，仍應停止當選。一、現役軍人或警察。二、現任職官。三、僧道及其他宗教師。
+* 48 區、保應辦事項，區民代表會及保民大會議事規則，由市政府定之。
 
-* 49 在區長民選前，隸屬於行政院之市，區長由內政部委任之，隸屬於省政府之市，區長由省政府委任之。委任前項區長，準用第四十六條之規定，由市長提出人選。
+* 49 本法施行細則，由行政院定之。
 
-* 50 前條之委任區長，違法失職時，市政府得請原委任機關罷免之。委任區長違法失職，市政府不呈請罷免時，得由各該區過半數坊長聯名具呈市政府及原委任機關，陳述必須罷免之理由。
+* 50 本法自公布日施行。
 
 * 51 委任區長應於一年內，召集坊民大會，成立坊公所。區內坊公所完全成立，六個月後，由內政部派員視察情形，核准區長民選。
 
